--- a/docs/manual/source/01_terms/index.tex
+++ b/docs/manual/source/01_terms/index.tex
@@ -1,3 +1,3 @@
-\renewcommand{\glossname}{РўРµСЂРјРёРЅС‹ Рё РѕРїСЂРµРґРµР»РµРЅРёСЏ}
-% \addcontentsline{toc}{chapter}{РўРµСЂРјРёРЅС‹ Рё РѕРїСЂРµРґРµР»РµРЅРёСЏ}
+\renewcommand{\glossname}{Термины и определения}
+% \addcontentsline{toc}{chapter}{Термины и определения}
 \printgloss{index}
