--- a/docs/manual/source/03_auth/index.tex
+++ b/docs/manual/source/03_auth/index.tex
@@ -1,62 +1,62 @@
-\chapter{РђРІС‚РѕСЂРёР·Р°С†РёСЏ}
+\chapter{Авторизация}
     \label{sec:auth}
     
-    Р§РµСЂРµР· РїСЂРѕС†РµРґСѓСЂСѓ Р°РІС‚РѕСЂРёР·Р°С†РёРё РїСЂРѕС…РѕРґРёС‚ Р»СЋР±РѕР№ РїРѕР»СЊР·РѕРІР°С‚РµР»СЊ, Р¶РµР»Р°СЋС‰РёР№ РїРѕР»СѓС‡РёС‚СЊ 
-    РґРѕСЃС‚СѓРї Рє РґРѕРїРѕР»РЅРёС‚РµР»СЊРЅС‹Рј С„СѓРЅРєС†РёСЏРј, Рє РєРѕС‚РѕСЂС‹Рј РЅРµ РёРјРµРµС‚ РґРѕСЃС‚СѓРїР° РїРѕР»СЊР·РѕРІР°С‚РµР»СЊ РіСЂСѓРїРїС‹
-    \\\gloss{nonauth_user}. Р§РµСЂРµР· РЅРµС‘ РЅРµ РїСЂРѕС…РѕРґРёС‚ С‚РѕР»СЊРєРѕ РїРѕР»СЊР·РѕРІР°С‚РµР»СЊ \\\gloss{admin}.
+    Через процедуру авторизации проходит любой пользователь, желающий получить 
+    доступ к дополнительным функциям, к которым не имеет доступа пользователь группы
+    \\\gloss{nonauth_user}. Через неё не проходит только пользователь \\\gloss{admin}.
     
-    РђРІС‚РѕСЂРёР·Р°С†РёСЏ РїРѕСЃРµС‚РёС‚РµР»СЏ РјР°РіР°Р·РёРЅР° РѕСЃРЅРѕРІР°РЅР° РЅР° РєСЂРѕСЃСЃРґРѕРјРµРЅРЅРѕР№ РїРµСЂРµРґР°С‡Рµ СЃРµСЃСЃРёРё РѕС‚ \gloss{AG}.
+    Авторизация посетителя магазина основана на кроссдоменной передаче сессии от \gloss{AG}.
 
-    \section{РћР±С‰РµРµ РІ РїСЂРѕС†РµРґСѓСЂРµ Р°РІС‚РѕСЂРёР·Р°С†РёРё(РєСЂРѕСЃСЃРґРѕРјРµРЅРЅР°СЏ Р°РІС‚РѕСЂРёР·Р°С†РёСЏ)}
+    \section{Общее в процедуре авторизации(кроссдоменная авторизация)}
     \label{sec:auth_common}
     
         \begin{enumerate}
-            \item РџРѕР»СЊР·РѕРІР°С‚РµР»СЊ РјР°РіР°Р·РёРЅР° РјРѕР¶РµС‚ Р±С‹С‚СЊ Р°РІС‚РѕСЂРёР·РѕРІР°РЅ С‚РѕР»СЊРєРѕ РµСЃР»Рё РѕРЅ Р°РІС‚РѕСЂРёР·РѕРІР°РЅ РЅР° \gloss{AG}.
-            \item Р•СЃР»Рё РїРѕСЃРµС‚РёС‚РµР»СЊ РЅРµ Р°РІС‚РѕСЂРёР·РѕРІР°РЅ РІ РјР°РіР°Р·РёРЅРµ, С‚Рѕ РЅР° РµРіРѕ СЃС‚СЂР°РЅРёС†Рµ РѕСЃРѕР±С‹Рј РѕР±СЂР°Р·РѕРј С„РѕСЂРјРёСЂСѓРµС‚СЃСЏ 
-                СЃСЃС‹Р»РєР° РЅР° СЃС‚СЂР°РЅРёС†Сѓ \gloss{AG}, РІС‹РІРѕРґСЏС‰СѓСЋ РёРЅС„РѕСЂРјР°С†РёСЋ РѕР± \gloss{AGSESSIONID} РІ Р·Р°С€РёС„СЂРѕРІР°РЅРЅРѕРј РІРёРґРµ.
-            \item Р Р°СЃС€РёС„СЂРѕРІР°РІ \gloss{AGSESSIONID}, РјР°РіР°Р·РёРЅ РїРѕР»СѓС‡Р°РµС‚ \gloss{AGPROFILE} Сѓ \gloss{AGAPI}.
-            \item Р”Р°Р»РµРµ, РІ Р·Р°РІРёСЃРёРјРѕСЃС‚Рё РѕС‚ С‚РѕРіРѕ, Р·Р°С…РѕРґРёР» Р»Рё РїРѕСЃРµС‚РёС‚РµР»СЊ РІ \gloss{shop} СЂР°РЅРµРµ, 
-                РїСЂРѕРёСЃС…РѕРґРёС‚ РїРµСЂРІРёС‡РЅР°СЏ(СЃРј.\ref{sec:auth_first}) РёР»Рё РІС‚РѕСЂРёС‡РЅР°СЏ(СЃРј.\ref{sec:auth_second}) Р°РІС‚РѕСЂРёР·Р°С†РёСЏ
+            \item Пользователь магазина может быть авторизован только если он авторизован на \gloss{AG}.
+            \item Если посетитель не авторизован в магазине, то на его странице особым образом формируется 
+                ссылка на страницу \gloss{AG}, выводящую информацию об \gloss{AGSESSIONID} в зашифрованном виде.
+            \item Расшифровав \gloss{AGSESSIONID}, магазин получает \gloss{AGPROFILE} у \gloss{AGAPI}.
+            \item Далее, в зависимости от того, заходил ли посетитель в \gloss{shop} ранее, 
+                происходит первичная(см.\ref{sec:auth_first}) или вторичная(см.\ref{sec:auth_second}) авторизация
         \end{enumerate}
     
-    \section{РџРµСЂРІРёС‡РЅР°СЏ Р°РІС‚РѕСЂРёР·Р°С†РёСЏ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ}
+    \section{Первичная авторизация пользователя}
     \label{sec:auth_first}
 
         \begin{enumerate}
-            \item РџСЂРѕРёР·РІРѕРґРёС‚СЃСЏ РµСЃР»Рё СЃСѓС‰РµСЃС‚РІСѓСЋС‰РёР№ РїРѕР»СЊР·РѕРІР°С‚РµР»СЊ \gloss{AG} РІРїРµСЂРІС‹Рµ Р·Р°С€РµР» РІ \gloss{shop}.
-            \item РџРѕСЃР»Рµ С‚РѕРіРѕ РєР°Рє \gloss{shop} РїРѕР»СѓС‡РёС‚ \gloss{AGPROFILE} (СЃРј. \ref{sec:auth_common}), С‡РµСЂРµР· \gloss{BXAPI} СЃРѕР·РґР°С‘С‚СЃСЏ \gloss{BXUSER}
-            \item Р’ РєР°С‡РµСЃС‚РІРµ Р»РѕРіРёРЅР° РґР»СЏ РЅРµРіРѕ РёСЃРїРѕР»СЊР·СѓРµС‚СЃСЏ С‚РµР»РµС„РѕРЅ, РЅР° РєРѕС‚РѕСЂС‹Р№ Р·Р°СЂРµРіРёСЃС‚СЂРёСЂРѕРІР°РЅ \gloss{AGPROFILE}.
-            \item РџР°СЂРѕР»СЊ Р·Р°РґР°С‘С‚СЃСЏ СЃР»СѓС‡Р°Р№РЅРѕ(С‚Р°Рє РєР°Рє СЃР°Рј РїРѕ СЃРµР±Рµ \gloss{BXUSER} РЅРµ РїСЂРµРґРЅРѕР·РЅР°С‡РµРЅ РґР»СЏ СЃР°РјРѕСЃС‚РѕСЏС‚РµР»СЊРЅРѕР№ Р°РІС‚РѕСЂРёР·Р°С†РёРё РІ \gloss{shop})
-            \item Р”Р°Р»РµРµ РїРѕСЃРµС‚РёС‚РµР»СЊ Р°РІС‚РѕРјР°С‚РёС‡РµСЃРєРё Р°РІС‚РѕСЂРёР·СѓРµС‚СЃСЏ РЅР° \gloss{shop} Рё РїСЂРѕРґРѕР»Р¶Р°РµС‚ СЂР°Р±РѕС‚Сѓ РєР°Рє \gloss{auth_user}
+            \item Производится если существующий пользователь \gloss{AG} впервые зашел в \gloss{shop}.
+            \item После того как \gloss{shop} получит \gloss{AGPROFILE} (см. \ref{sec:auth_common}), через \gloss{BXAPI} создаётся \gloss{BXUSER}
+            \item В качестве логина для него используется телефон, на который зарегистрирован \gloss{AGPROFILE}.
+            \item Пароль задаётся случайно(так как сам по себе \gloss{BXUSER} не преднозначен для самостоятельной авторизации в \gloss{shop})
+            \item Далее посетитель автоматически авторизуется на \gloss{shop} и продолжает работу как \gloss{auth_user}
         \end{enumerate}
     
     
-    \section{Р’С‚РѕСЂРёС‡РЅР°СЏ Р°РІС‚РѕСЂРёР·Р°С†РёСЏ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ}
+    \section{Вторичная авторизация пользователя}
     \label{sec:auth_second}
         \begin{enumerate}
-            \item РџСЂРѕРёР·РІРѕРґРёС‚СЃСЏ РµСЃР»Рё СЃСѓС‰РµСЃС‚РІСѓСЋС‰РёР№ РїРѕР»СЊР·РѕРІР°С‚РµР»СЊ \gloss{AG} РїРѕРІС‚РѕСЂРЅРѕ Р·Р°С€РµР» РІ \gloss{shop}, Рё РЅРµ Р°РІС‚РѕСЂРёР·РѕРІР°РЅ РІ РЅРµРј РєР°Рє \gloss{BXUSER}.
-            \item РџРѕСЃР»Рµ С‚РѕРіРѕ РєР°Рє \gloss{shop} РїРѕР»СѓС‡РёС‚ \gloss{AGPROFILE} (СЃРј. \ref{sec:auth_common}), 
-                С‡РµСЂРµР· \gloss{BXAPI} РёС‰РµС‚СЃСЏ \gloss{BXUSER} СЃ С‚Р°РєРёРј Р¶Рµ РЅРѕРјРµСЂРѕРј С‚РµР»РµС„РѕРЅР°.
-            \item Р”Р°Р»РµРµ РїРѕСЃРµС‚РёС‚РµР»СЊ Р°РІС‚РѕРјР°С‚РёС‡РµСЃРєРё Р°РІС‚РѕСЂРёР·СѓРµС‚СЃСЏ РЅР° \gloss{shop} Рё РїСЂРѕРґРѕР»Р¶Р°РµС‚ СЂР°Р±РѕС‚Сѓ РєР°Рє \gloss{auth_user}
+            \item Производится если существующий пользователь \gloss{AG} повторно зашел в \gloss{shop}, и не авторизован в нем как \gloss{BXUSER}.
+            \item После того как \gloss{shop} получит \gloss{AGPROFILE} (см. \ref{sec:auth_common}), 
+                через \gloss{BXAPI} ищется \gloss{BXUSER} с таким же номером телефона.
+            \item Далее посетитель автоматически авторизуется на \gloss{shop} и продолжает работу как \gloss{auth_user}
         \end{enumerate}
     
     
-    \section{РџРѕР»СѓС‡РµРЅРёРµ РёСЃС‚РѕСЂРёРё Р±Р°Р»Р»РѕРІ}
+    \section{Получение истории баллов}
     \label{sec:get_points_history}
     \begin{enumerate}
-        \item Р”Р»СЏ РїСЂРёРЅСЏС‚РёСЏ СЂРµС€РµРЅРёСЏ Рѕ РІРѕР·РјРѕР¶РЅРѕСЃС‚Рё СЃРѕРІРµСЂС€РµРЅРёСЏ РїРѕРєСѓРїРєРё РІ \gloss{shop} 
-            РЅРµРѕР±С…РѕРґРёРјРѕ РїРѕР»СѓС‡РёС‚СЊ РёРЅС„РѕСЂРјР°С†РёСЋ Рѕ РєРѕР»РёС‡РµСЃС‚РІРµ Р±Р°Р»Р»РѕРІ Сѓ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ \gloss{AG}
-        \item РСЃС‚РѕСЂРёСЏ Р±Р°Р»Р»РѕРІ РїРѕСЃР»Рµ Р°РІС‚РѕСЂРёР·Р°С†РёРё РїРѕР»СѓС‡Р°РµС‚СЃСЏ СЃ РїРѕРјРѕС‰СЊСЋ \gloss{AGAPI} РІ РІРёРґРµ СЃРїРёСЃРєР° РѕР±СЉРµРєС‚РѕРІ С‚РёРїР°
-            \gloss{AGTRANSACT} Рё РѕС„РѕСЂРјР»РµРЅРёСЏ РёС… РІ РІРёРґРµ РѕР±СЉРµРєС‚РѕРІ С‚РёРїР° \gloss{BXTRANSACT}
-        \item Р—Р°С‚РµРј Р±Р°Р»Р°РЅСЃ Р±Р°Р»Р»РѕРІ, РїРѕР»СѓС‡РµРЅРЅС‹С… РёР· \gloss{AG} РёСЃРїРѕР»СЊР·СѓРµС‚СЃСЏ РІ РїСЂРѕС†РµСЃСЃРµ РѕРІРѕСЂРјР»РµРЅРёСЏ Р·Р°РєР°Р·РѕРІ \gloss{shop}
+        \item Для принятия решения о возможности совершения покупки в \gloss{shop} 
+            необходимо получить информацию о количестве баллов у пользователя \gloss{AG}
+        \item История баллов после авторизации получается с помощью \gloss{AGAPI} в виде списка объектов типа
+            \gloss{AGTRANSACT} и оформления их в виде объектов типа \gloss{BXTRANSACT}
+        \item Затем баланс баллов, полученных из \gloss{AG} используется в процессе овормления заказов \gloss{shop}
     \end{enumerate}
 
     
-    \section{РџРѕР»СѓС‡РµРЅРёРµ Р·Р°РєР°Р·РѕРІ}
+    \section{Получение заказов}
     \begin{enumerate}
-        \item Р”Р»СЏ РѕС‚СЃР»РµР¶РёРІР°РЅРёСЏ СЃРѕСЃС‚РѕСЏРЅРёСЏ Р·Р°РєР°Р·РѕРІ РѕР±СЉРµРєС‚С‹ С‚РёРїР° \gloss{BXORDER} СЃРёРЅС…СЂРѕРЅРёР·РёСЂСѓСЋС‚СЃСЏ СЃ \gloss{UNF} РїРѕСЃСЂРµРґСЃС‚РІРѕРј 
-            РїСЂРѕС†РµСЃСЃР° \gloss{exchange1c}.
-        \item Р¦РµРЅС‚СЂР°Р»СЊРЅС‹Рј С…СЂР°РЅРёР»РёС‰РµРј РёРЅС„РѕСЂРјР°С†РёРё Рѕ Р·Р°РєР°Р·Р°С… СЏРІР»СЏРµС‚СЃСЏ \gloss{UNF}, Р° \gloss{shop} СЏРІР»СЏРµС‚СЃСЏ РєР°Рє Р±С‹ РґРѕРїРѕР»РЅРёС‚РµР»СЊРЅС‹Рј web-РёРЅС‚РµСЂС„РµР№СЃРѕРј Рє РЅРµРјСѓ
+        \item Для отслеживания состояния заказов объекты типа \gloss{BXORDER} синхронизируются с \gloss{UNF} посредством 
+            процесса \gloss{exchange1c}.
+        \item Центральным хранилищем информации о заказах является \gloss{UNF}, а \gloss{shop} является как бы дополнительным web-интерфейсом к нему
     \end{enumerate}
 
     
