--- a/docs/manual/source/05_admin_funcs/index.tex
+++ b/docs/manual/source/05_admin_funcs/index.tex
@@ -1,1 +1,1 @@
-\chapter{Р¤СѓРЅРєС†РёРѕРЅР°Р» РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ РіСЂСѓРїРїС‹ <<\gloss{shop_admin}>>}
+\chapter{Функционал пользователя группы <<\gloss{shop_admin}>>}
