--- a/docs/manual/source/06_content_funcs/index.tex
+++ b/docs/manual/source/06_content_funcs/index.tex
@@ -1,1 +1,1 @@
-\chapter{Р¤СѓРЅРєС†РёРѕРЅР°Р» РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ РіСЂСѓРїРїС‹ <<\gloss{content_editor}>>}
+\chapter{Функционал пользователя группы <<\gloss{content_editor}>>}
