--- a/docs/manual/source/07_external_services/index.tex
+++ b/docs/manual/source/07_external_services/index.tex
@@ -1,25 +1,25 @@
-\chapter{Р’Р·Р°РёРјРѕРґРµР№СЃС‚РІРёРµ СЃ РІРЅРµС€РЅРёРјРё СЃРµСЂРІРёСЃР°РјРё}
+\chapter{Взаимодействие с внешними сервисами}
 
-    \section{РЎРІСЏР·СЊ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ СЃ РєРѕРЅС‚СЂР°РіРµРЅС‚РѕРј РІ \gloss{UNF}}
+    \section{Связь пользователя с контрагентом в \gloss{UNF}}
         \begin{enumerate}
-            \item РЎРІСЏР·СЊ РѕР±СЉРµРєС‚РѕРј \gloss{BXUSER} СЃ РєРѕРЅС‚СЂР°РіРµРЅС‚РѕРј РІ \gloss{UNF} СѓСЃС‚Р°РЅР°РІР»РёРІР°РµС‚СЃСЏ РІРѕ РІСЂРµРјСЏ РґРµР№СЃС‚РІРёСЏ \gloss{exchange1c}.
-            \item РЎРІСЏР·СЊ СѓСЃС‚Р°РЅР°РІР»РёРІР°РµС‚СЃСЏ РЅР° РѕСЃРЅРѕРІРµ РїР°СЂР°РјРµС‚СЂР° <<С‚РµР»РµС„РѕРЅ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ>>.
+            \item Связь объектом \gloss{BXUSER} с контрагентом в \gloss{UNF} устанавливается во время действия \gloss{exchange1c}.
+            \item Связь устанавливается на основе параметра <<телефон пользователя>>.
         \end{enumerate}
 
-    \section{РЎРІСЏР·СЊ \gloss{BXUSER} \gloss{AG}}
+    \section{Связь \gloss{BXUSER} \gloss{AG}}
         \begin{enumerate}
-            \item РЎРІСЏР·СЊ СѓСЃС‚Р°РЅР°РІР»РёРІР°РµС‚СЃСЏ РЅР° РѕСЃРЅРѕРІРµ РїР°СЂР°РјРµС‚СЂР° <<С‚РµР»РµС„РѕРЅ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ>>.
+            \item Связь устанавливается на основе параметра <<телефон пользователя>>.
         \end{enumerate}
 
-    \section{РЎРІСЏР·СЊ Р·Р°РєР°Р·Р° РІ \gloss{shop} Рё \gloss{UNF}}
+    \section{Связь заказа в \gloss{shop} и \gloss{UNF}}
         \begin{enumerate}
-            \item РЎРІСЏР·СЊ СѓСЃС‚Р°РЅР°РІР»РёРІР°РµС‚СЃСЏ РІРѕ РІСЂРµРјСЏ РґРµР№СЃС‚РІРёСЏ \gloss{exchange1c}.
-            \item РЎРІСЏР·СЊ СѓСЃС‚Р°РЅР°РІР»РёРІР°РµС‚СЃСЏ РЅР° РѕСЃРЅРѕРІРµ \gloss{XMLID} Р·Р°РєР°Р·Р°.
+            \item Связь устанавливается во время действия \gloss{exchange1c}.
+            \item Связь устанавливается на основе \gloss{XMLID} заказа.
         \end{enumerate}
     
-    \section{РЎРІСЏР·СЊ РѕР±СЉРµРєС‚РѕРІ \gloss{AGTRANSACT} Рё \gloss{BXTRANSACT}}
+    \section{Связь объектов \gloss{AGTRANSACT} и \gloss{BXTRANSACT}}
         \begin{enumerate}
-            \item РЎРІСЏР·СЊ СѓСЃС‚Р°РЅР°РІР»РёРІР°РµС‚СЃСЏ РІРѕ РІСЂРµРјСЏ РґРµР№СЃС‚РІРёСЏ РїРѕР»СѓС‡РµРЅРёРµ РёСЃС‚РѕСЂРёРё Р±Р°Р»Р»РѕРІ (СЃРј. \ref{sec:get_points_history}).
-            \item РЎРІСЏР·СЊ СѓСЃС‚Р°РЅР°РІР»РёРІР°РµС‚СЃСЏ РЅР° РѕСЃРЅРѕРІРµ РєРѕРјРјРµРЅС‚Р°СЂРёСЏ РІ РѕР±СЉРµРєС‚Рµ \gloss{AGTRANSACT} РЅРѕРјРµСЂР° Р·Р°РєР°Р·Р° РІ РѕР±СЉРµРєС‚Рµ \gloss{BXORDER}.
+            \item Связь устанавливается во время действия получение истории баллов (см. \ref{sec:get_points_history}).
+            \item Связь устанавливается на основе комментария в объекте \gloss{AGTRANSACT} номера заказа в объекте \gloss{BXORDER}.
         \end{enumerate}
     
