--- a/docs/manual/source/08_usecases/index.tex
+++ b/docs/manual/source/08_usecases/index.tex
@@ -1,68 +1,68 @@
-\chapter{РўРёРїРѕРІС‹Рµ СЃС†РµРЅР°СЂРёРё РїРѕРІРµРґРµРЅРёСЏ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ}
+\chapter{Типовые сценарии поведения пользователя}
 
-    \section{РЎС†РµРЅР°СЂРёРё РЅРµР°РІС‚РѕСЂРёР·РѕРІР°РЅРЅРѕРіРѕ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ}
+    \section{Сценарии неавторизованного пользователя}
 
-        \subsection{Р’С‹С…РѕРґ РёР· Р°РІС‚РѕСЂРёР·Р°С†РёРё.}
+        \subsection{Выход из авторизации.}
         \label{sec:usecase_exit}
             \begin{enumerate}
-                \item РџРµСЂРµР№С‚Рё РЅР° \gloss{AG} 
-                \item РЎРѕРІРµСЂС€РёС‚СЊ РІС‹С…РѕРґ.
-                \item Р’РµСЂРЅСѓС‚СЊСЃСЏ РЅР° \gloss{shop}
+                \item Перейти на \gloss{AG} 
+                \item Совершить выход.
+                \item Вернуться на \gloss{shop}
             \end{enumerate}
 
     
-        \subsection{Р’С‹Р±РѕСЂ РїРѕРѕС‰СЂРµРЅРёСЏ РїРѕ С„РёР»СЊС‚СЂСѓ РЅР° РіР»Р°РІРЅРѕР№}
+        \subsection{Выбор поощрения по фильтру на главной}
         
         
-        \subsection{Р’С‹Р±РѕСЂ РїРѕРѕС‰СЂРµРЅРёСЏ РїРѕ С„РёР»СЊС‚СЂСѓ РІ СЂР°Р·РґРµР»Р°С… РєР°С‚Р°Р»РѕРіР°}
+        \subsection{Выбор поощрения по фильтру в разделах каталога}
         
-        \subsection{РџСЂРѕСЃРјРѕС‚СЂ РїСЂР°РІРёР» <<РєР°Рє СЌС‚Рѕ СЂР°Р±РѕС‚Р°РµС‚>>}
+        \subsection{Просмотр правил <<как это работает>>}
         
-        \subsection{РџСЂРѕСЃРјРѕС‚СЂ РїСЂР°РІРёР» <<РђРґСЂРµСЃР°>>}
+        \subsection{Просмотр правил <<Адреса>>}
         
-        \subsection{РџСЂРѕСЃРјРѕС‚СЂ РїСЂР°РІРёР» <<FAQ>>}
+        \subsection{Просмотр правил <<FAQ>>}
         
-        \subsection{РќР°РїРёСЃР°РЅРёРµ СЃРѕРѕР±С‰РµРЅРёСЏ РІ С„РѕСЂРјРµ РѕР±СЂР°С‚РЅРѕР№ СЃРІСЏР·Рё.}
+        \subsection{Написание сообщения в форме обратной связи.}
 
-     \section{РЎС†РµРЅР°СЂРёРё Р°РІС‚РѕСЂРёР·РѕРІР°РЅРЅРѕРіРѕ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ}
+     \section{Сценарии авторизованного пользователя}
 
-        \subsection{РђРІС‚РѕСЂРёР·Р°С†РёСЏ.}
+        \subsection{Авторизация.}
             \begin{enumerate}
-                \item РџРµСЂРµР№С‚Рё РЅР° \gloss{AG} 
-                \item РЎРѕРІРµСЂС€РёС‚СЊ РІС…РѕРґ.
-                \item Р’РµСЂРЅСѓС‚СЊСЃСЏ РЅР° \gloss{shop}
+                \item Перейти на \gloss{AG} 
+                \item Совершить вход.
+                \item Вернуться на \gloss{shop}
             \end{enumerate}
             
-        \subsection{Р—Р°РєР°Р· РїРѕРѕС‰СЂРµРЅРёСЏ}
-        \subsection{Р Р°Р·РјРµС‰РµРЅРёРµ РѕС‚Р·С‹РІР° СЃ РѕС†РµРЅРєРѕР№.}
-        \subsection{РџСЂРѕСЃРјРѕС‚СЂ РѕС‚Р·С‹РІРѕРІ.}
-        \subsection{РџСЂРѕСЃРјРѕС‚СЂ СЃРІРѕРёС… Р·Р°РєР°Р·РѕРІ.}
-        \subsection{РћС‚РјРµРЅР° Р·Р°РєР°Р·Р°.}
-        \subsection{РџРµС‡Р°С‚СЊ РєСѓРїРѕРЅР° РґР»СЏ Р·Р°РєР°Р·Р°РЅРЅРѕРіРѕ РїРѕРѕС‰СЂРµРЅРёСЏ.}
-        \subsection{РЎРІСЏР·СЊ СЃ Р°РґРјРёРЅРёСЃС‚СЂР°С†РёРµР№ РїРѕ РІРѕРїСЂРѕСЃСѓ РєРѕРЅРєСЂРµС‚РЅРѕРіРѕ Р·Р°РєР°Р·Р°.}
-        \subsection{РџСЂРѕСЃРјРѕС‚СЂ СЃРІРѕРёС… Р±Р°Р»Р»РѕРІ.}
-        \subsection{Р”РѕР±Р°РІР»РµРЅРёРµ РїРѕРѕС‰СЂРµРЅРёСЏ РІ Р¶РµР»Р°РЅРёСЏ.}
-        \subsection{РџСЂРѕСЃРјРѕС‚СЂ СЃРІРѕРёС… Р¶РµР»Р°РЅРёР№.}
-        \subsection{РЈРґР°Р»РµРЅРёРµ РїРѕРѕС‰СЂРµРЅРёСЏ РёР· Р¶РµР»Р°РЅРёР№.}
+        \subsection{Заказ поощрения}
+        \subsection{Размещение отзыва с оценкой.}
+        \subsection{Просмотр отзывов.}
+        \subsection{Просмотр своих заказов.}
+        \subsection{Отмена заказа.}
+        \subsection{Печать купона для заказанного поощрения.}
+        \subsection{Связь с администрацией по вопросу конкретного заказа.}
+        \subsection{Просмотр своих баллов.}
+        \subsection{Добавление поощрения в желания.}
+        \subsection{Просмотр своих желаний.}
+        \subsection{Удаление поощрения из желаний.}
 
-    \section{РЎС†РµРЅР°СЂРёРё СЂРµРґР°РєС‚РѕСЂР° РєРѕРЅС‚РµРЅС‚Р°}
+    \section{Сценарии редактора контента}
 
-        \subsection{Р РµРґР°РєС‚РёСЂРѕРІР°РЅРёРµ РїСЂР°РІРёР» <<РєР°Рє СЌС‚Рѕ СЂР°Р±РѕС‚Р°РµС‚>>}
-        \subsection{Р РµРґР°РєС‚РёСЂРѕРІР°РЅРёРµ РїСѓРЅРєС‚Р° РїСЂР°РІРёР» <<FAQ>>}
-        \subsection{Р”РѕР±Р°РІР»РµРЅРёРµ РїСѓРЅРєС‚Р° РїСЂР°РІРёР» <<FAQ>>}
-        \subsection{РџСЂРѕСЃРјРѕС‚СЂ РѕР±СЂР°С‰РµРЅРёР№ С‡РµСЂРµР· \gloss{FBF}}
+        \subsection{Редактирование правил <<как это работает>>}
+        \subsection{Редактирование пункта правил <<FAQ>>}
+        \subsection{Добавление пункта правил <<FAQ>>}
+        \subsection{Просмотр обращений через \gloss{FBF}}
 
-    \section{РЎС†РµРЅР°СЂРёРё Р°РґРјРёРЅРёСЃС‚СЂР°С‚РѕСЂР° РјР°РіР°Р·РёРЅР°}
+    \section{Сценарии администратора магазина}
 
-        \subsection{Р”РѕР±Р°РІР»РµРЅРёРµ РїРѕРёСЃРє РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ РІ СЃРїРёСЃРєРµ}
-        \subsection{Р”РѕР±Р°РІР»РµРЅРёРµ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ РІ РіСЂСѓРїРїСѓ.}
-        \subsection{Р’С‹РіСЂСѓР·РєР° РєР°С‚Р°Р»РѕРіР° \gloss{UNF} РІ \gloss{shop}}
-        \subsection{РћР±РјРµРЅ Р·Р°РєР°Р·Р°РјРё РјРµР¶РґСѓ \gloss{UNF} РІ \gloss{shop}}
+        \subsection{Добавление поиск пользователя в списке}
+        \subsection{Добавление пользователя в группу.}
+        \subsection{Выгрузка каталога \gloss{UNF} в \gloss{shop}}
+        \subsection{Обмен заказами между \gloss{UNF} в \gloss{shop}}
 
 
-    \section{РљРѕРјРїР»РµРєСЃРЅС‹Рµ СЃС†РµРЅР°СЂРёРё.}
+    \section{Комплексные сценарии.}
         
-        \subsection{Р—Р°РєР°Р·}
+        \subsection{Заказ}
 
 
 
