--- a/docs/manual/source/index.bib
+++ b/docs/manual/source/index.bib
@@ -1,182 +1,182 @@
 @gd{CMS,
 word={CMS},
-definition={РЎРёСЃС‚РµРјР° СѓРїСЂР°РІР»РµРЅРёСЏ РєРѕРЅС‚РµРЅС‚РѕРј. РЎРїРµС†РёР°Р»СЊРЅС‹Р№ СЂР°Р·РґРµР» РјР°РіР°Р·РёРЅР°, 
-РїСЂРµРґРЅР°Р·РЅР°С‡РµРЅРЅС‹Р№ РґР»СЏ РјР°РЅРёРїСѓР»РёСЂРѕРІР°РЅРёСЏ РѕР±СЉРµРєС‚Р°РјРё, РѕС‚РѕР±СЂР°Р¶Р°РµРјС‹РјРё РЅР°
-ageР°Р№С‚Рµ. РќР°РїСЂРёРјРµСЂ Р±Р°РЅРµСЂР°РјРё, С‚РµРєСЃС‚РѕРј РЅР° СЃС‚СЂР°РЅРёС†Р°С… Рё РїСЂ. Р’С…РѕРґ Р·Р°С‰РёС‰РµРЅ 
-Р°РІС‚РѕСЂРёР·Р°С†РёРµР№ Рё СЂР°СЃРїРѕР»РѕР¶РµРЅ РїРѕ Р°РґСЂРµСЃСѓ /bitrix/admin/}
+definition={Система управления контентом. Специальный раздел магазина, 
+предназначенный для манипулирования объектами, отображаемыми на
+ageайте. Например банерами, текстом на страницах и пр. Вход защищен 
+авторизацией и расположен по адресу /bitrix/admin/}
 }
 
 @gd{FBF,
-word={Р¤РћРЎ},
-definition={Р¤РѕСЂРјР° РѕР±СЂР°С‚РЅРѕР№ СЃРІСЏР·Рё. РџСЂРµРґРЅР°Р·РЅР°С‡РµРЅР° РґР»СЏ РѕС‚РїСЂР°РІРєРё СЃРѕРѕР±С‰РµРЅРёР№ 
-Р°РґРјРёРЅРёСЃС‚СЂР°С†РёРё РјР°РіР°Р·РёРЅР°. РЎРѕРѕР±С‰РµРЅРёСЏ РїСЂРёС…РѕРґСЏС‚ РЅР°
-РїРѕС‡С‚Сѓ Р°РґРјРёРЅРёСЃС‚СЂР°С‚РѕСЂСѓ РјР°РіР°Р·РёРЅР° Рё Р·Р°РїРёСЃС‹РІР°СЋС‚СЃСЏ РІ Р‘Р”, РѕС‚РєСѓРґР° РјРѕРіСѓС‚ Р±С‹С‚СЊ 
-РїСЂРѕС‡РёС‚Р°РЅС‹ С‡РµСЂРµР· \gloss{CMS}}
+word={ФОС},
+definition={Форма обратной связи. Предназначена для отправки сообщений 
+администрации магазина. Сообщения приходят на
+почту администратору магазина и записываются в БД, откуда могут быть 
+прочитаны через \gloss{CMS}}
 }
 
 @gd{goods_tizer,
-word={РўРёР·РµСЂ С‚РѕРІР°СЂР°},
-definition={Р­Р»РµРјРµРЅС‚ РёРЅС‚РµСЂС„РµР№СЃР°, СЃРѕРґРµСЂР¶Р°С‰РёР№ РєСЂР°С‚РєСѓСЋ РёРЅС„РѕСЂРјР°С†РёСЋ Рѕ С‚РѕРІР°СЂРµ. 
-РЇРІР»СЏРµС‚СЃСЏ СЌР»РµРјРµРЅС‚РѕРј РѕР±Р»Р°СЃС‚Рё РІС‹РІРѕРґР° С‚РёР·РµСЂРѕРІ, РІ
-РєРѕСЂРѕР№ СЂР°СЃРїРѕР»Р°РіР°РµСЃСЏ РІ РІРёРґРµ РїР»РёС‚РєРё. СЃРј. СЂРёСЃ. \ref{fig:common_items_4} Рё 
+word={Тизер товара},
+definition={Элемент интерфейса, содержащий краткую информацию о товаре. 
+Является элементом области вывода тизеров, в
+корой располагаеся в виде плитки. см. рис. \ref{fig:common_items_4} и 
 \ref{fig:common_items_5}}
 }
 
 @gd{admin,
-word={РђРґРјРёРЅРёСЃС‚СЂР°С‚РѕСЂ \gloss{CMS}},
-definition={РџРѕР»СЊР·РѕРІР°С‚РµР»СЊ \gloss{CMS} РёРјРµСЋС‰РёР№ РґРѕСЃС‚СѓРї РєРѕ РІСЃРµРј РµС‘ С„СѓРЅРєС†РёСЏРј. 
-РЎРѕР·РґР°С‘С‚СЃСЏ РїСЂРё РёРЅСЃС‚Р°Р»СЏС†РёРё \gloss{CMS}. 
-РђРІС‚РѕСЂРёР·СѓРµС‚СЃСЏ С€С‚Р°С‚РЅС‹Рј РјРµС…Р°РЅРёР·РјРѕРј РїРѕ Р°РґСЂРµСЃСѓ /bitrix/}
+word={Администратор \gloss{CMS}},
+definition={Пользователь \gloss{CMS} имеющий доступ ко всем её функциям. 
+Создаётся при инсталяции \gloss{CMS}. 
+Авторизуется штатным механизмом по адресу /bitrix/}
 }
 
 
 @gd{shop_admin,
-word={РђРґРјРёРЅРёСЃС‚СЂР°С‚РѕСЂ РјР°РіР°Р·РёРЅР°},
-definition={РџРѕР»СЊР·РѕРІР°С‚РµР»СЊ \gloss{CMS} РёРјРµСЋС‰РёР№ РґРѕСЃС‚СѓРї РєРѕ РІСЃРµРј С„СѓРЅРєС†РёСЏРј РјР°РіР°Р·РёРЅР°. 
-РђРІС‚РѕСЂРёР·СѓРµС‚СЃСЏ С‚Р°Рє Р¶Рµ РєР°Рє Рё Р»СЋР±РѕР№ \gloss{auth_user}, РїСЂРёРІРёР»РµРіРёРё РїРѕР»СѓС‡Р°РµС‚ 
-РІРєР»СЋС‡РµРЅРёРµРј РІ РіСЂСѓРїРїСѓ РїРѕР»СЊР·РѕРІР°С‚РµР»РµРј \gloss{admin}.}
+word={Администратор магазина},
+definition={Пользователь \gloss{CMS} имеющий доступ ко всем функциям магазина. 
+Авторизуется так же как и любой \gloss{auth_user}, привилегии получает 
+включением в группу пользователем \gloss{admin}.}
 }
 
 @gd{content_editor,
-word={Р РµРґР°РєС‚РѕСЂ РєРѕРЅС‚РµРЅС‚Р°},
-definition={РџРѕР»СЊР·РѕРІР°С‚РµР»СЊ \gloss{CMS} РёРјРµСЋС‰РёР№ РґРѕСЃС‚СѓРї Рє С„СѓРЅРєС†РёСЏРј 
-СЂРµРґР°РєС‚РёСЂРѕРІР°РЅРёСЏ СЃРѕРґРµСЂР¶РёРјРѕРіРѕ 
-РёРЅС„РѕСЂРјР°С†РёРѕРЅРЅС‹С… СЂР°Р·РґРµР»РѕРІ (\ref{sec:rules_hiw}, \ref{sec:page_faq}, 
+word={Редактор контента},
+definition={Пользователь \gloss{CMS} имеющий доступ к функциям 
+редактирования содержимого 
+информационных разделов (\ref{sec:rules_hiw}, \ref{sec:page_faq}, 
 \ref{sec:slider}).
-РђРІС‚РѕСЂРёР·СѓРµС‚СЃСЏ С‚Р°Рє Р¶Рµ РєР°Рє Рё Р»СЋР±РѕР№ \gloss{auth_user}, РїСЂРёРІРёР»РµРіРёРё РїРѕР»СѓС‡Р°РµС‚ 
-РІРєР»СЋС‡РµРЅРёРµРј РІ РіСЂСѓРїРїСѓ РїРѕР»СЊР·РѕРІР°С‚РµР»РµРј \gloss{admin}.}
+Авторизуется так же как и любой \gloss{auth_user}, привилегии получает 
+включением в группу пользователем \gloss{admin}.}
 }
 
 @gd{auth_user,
-word={РђРІС‚РѕСЂРёР·РѕРІР°РЅРЅС‹Р№ РїРѕР»СЊР·РѕРІР°С‚РµР»СЊ},
-definition={РџРѕР»СЊР·РѕРІР°С‚РµР»СЊ Р°РІС‚РѕСЂРёР·РѕРІР°РЅРЅС‹Р№ РІ РјР°РіР°Р·РёРЅРµ С‡РµСЂРµР· РѕРїРёСЃР°РЅРЅСѓСЋ РІ СЂР°Р·РґРµР»Рµ 
-\ref{sec:auth} РїСЂРѕС†РµРґСѓСЂСѓ. }
+word={Авторизованный пользователь},
+definition={Пользователь авторизованный в магазине через описанную в разделе 
+\ref{sec:auth} процедуру. }
 }
 
 @gd{nonauth_user,
-word={РќРµР°РІС‚РѕСЂРёР·РѕРІР°РЅРЅС‹Р№ РїРѕР»СЊР·РѕРІР°С‚РµР»СЊ},
-definition={РџРѕР»СЊР·РѕРІР°С‚РµР»СЊ РЅРµ РїСЂРѕС€РµРґС€РёР№ РїСЂРѕС†РµРґСѓСЂСѓ РѕРїРёСЃР°РЅРЅСѓСЋ РІ СЂР°Р·РґРµР»Рµ 
-\ref{sec:auth} Рё РёРјРµСЋС‰РёР№ 
-РѕРіСЂР°РЅРёС‡РµРЅРЅС‹Р№ РґРѕСЃС‚СѓРї Рє С„СѓРЅРєС†РёРѕРЅР°Р»Сѓ, РѕРїРёСЃР°РЅРЅС‹Р№ РІ СЂР°Р·РґРµР»Рµ \ref{sec:nonauth_user}. }
+word={Неавторизованный пользователь},
+definition={Пользователь не прошедший процедуру описанную в разделе 
+\ref{sec:auth} и имеющий 
+ограниченный доступ к функционалу, описанный в разделе \ref{sec:nonauth_user}. }
 }
 
 
 @gd{AG,
-word={РђР“},
-definition={web-СЃР°Р№С‚ <<Р°РєС‚РёРІРЅС‹Р№ РіСЂР°Р¶РґР°РЅРёРЅ>>}
+word={АГ},
+definition={web-сайт <<активный гражданин>>}
 }
 
 @gd{goods,
-word={РўРѕРІР°СЂ},
-definition={Р­Р»РµРјРµРЅС‚ С‚РѕСЂРіРѕРІРѕРіРѕ РєР°С‚Р°Р»РѕРіР°, РїСЂРёРЅР°РґР»РµР¶Р°С‰РёР№ РєР°РєРѕРјСѓ-Р»РёР±Рѕ СЂР°Р·РґРµР»Сѓ Рё 
-РѕРїРёСЃС‹РІР°СЋС‰РёР№ РѕР±С‰РёРµ, Р° РЅРµ РёРЅРґРёРІРёРґСѓР°Р»СЊРЅС‹Рµ СЃРІРѕР№СЃС‚РІР°
-РїРѕРѕС‰СЂРµРЅРёСЏ(РєРѕС‚РѕСЂС‹РјРё РѕР±Р»Р°РґР°РµС‚ Р»СЋР±Р°СЏ РїСЂРµРґР»Р°РіР°РµРјР°СЏ Рє РїРѕРєСѓРїРєРµ РµРґРёРЅРёС†Р°). РќР°РїСЂРёРјРµСЂ, 
-Рє РїСЂРѕРґР°Р¶Рµ РјРѕР¶РµС‚ РїСЂРµРґР»Р°РіР°С‚СЊСЃСЏ С„СѓС‚Р±РѕР»РєР° СЃ
-Р»РѕРіРѕС‚РёРїРѕРј \gloss{AG} СЂР°Р·РјРµСЂРѕРІ РѕС‚ M РґРѕ XL, СЂР°Р·Р»РёС‡РЅС‹С… С†РІРµС‚РѕРІ, РЅР°С…РѕРґСЏС‰Р°СЏСЃСЏ РЅР° 
-СЂР°Р·Р»РёС‡РЅС‹С… СЃРєР»Р°РґР°С…. РўРѕРІР°СЂ, РІ РґР°РЅРЅРѕРј СЃР»СѓС‡Р°Рµ ---
-СЌС‚Рѕ <<Р¤СѓС‚Р±РѕР»РєР° СЃ Р»РѕРіРѕС‚РёРїРѕРј \gloss{AG}>>, РІСЃС‘ Р¶Рµ РѕСЃС‚Р°Р»СЊРЅРѕРµ РѕРїРёСЃС‹РІР°РµС‚СЃСЏ С‚Р°РєРёРј 
-РїРѕРЅСЏС‚РёРµРј РєР°Рє \gloss{offer}. РўРѕРІР°СЂ РІ С‚РѕСЂРіРѕРІРѕРј РєР°С‚Р°Р»РѕРіРµ 
-РѕС‚РѕР±СЂР°Р¶Р°РµС‚ РєР°СЂС‚РѕС‡РєР° С‚РѕРІР°СЂР° (СЃРј. \ref{sec:goods_cart}). РњР°РіР°Р·РёРЅ РїРѕР»СѓС‡Р°РµС‚ 
-РёРЅС„РѕСЂРјР°С†РёСЋ Рѕ РЅРёС… РІ СЂРµР·СѓР»СЊС‚Р°С‚Рµ РґРµР№СЃС‚РІРёСЏ \gloss{import1c}.
+word={Товар},
+definition={Элемент торгового каталога, принадлежащий какому-либо разделу и 
+описывающий общие, а не индивидуальные свойства
+поощрения(которыми обладает любая предлагаемая к покупке единица). Например, 
+к продаже может предлагаться футболка с
+логотипом \gloss{AG} размеров от M до XL, различных цветов, находящаяся на 
+различных складах. Товар, в данном случае ---
+это <<Футболка с логотипом \gloss{AG}>>, всё же остальное описывается таким 
+понятием как \gloss{offer}. Товар в торговом каталоге 
+отображает карточка товара (см. \ref{sec:goods_cart}). Магазин получает 
+информацию о них в результате действия \gloss{import1c}.
 }
 }
 
 @gd{offer,
-word={РўРѕСЂРіРѕРІРѕРµ РїСЂРµРґР»РѕР¶РµРЅРёРµ},
-definition={Р­Р»РµРјРµРЅС‚ С‚РѕСЂРіРѕРІРѕРіРѕ РєР°С‚Р°Р»РѕРіР°, СЃРѕРґРµСЂР¶Р°С‰РёР№ РёРЅРґРёРІРёРґСѓР°Р»СЊРЅСѓСЋ РёРЅС„РѕСЂРјР°С†РёСЋ 
-Рѕ РєРѕРЅРєСЂРµС‚РЅРѕР№ РµРґРёРЅРёС†Рµ РїРѕРѕС‰СЂРµРЅРёСЏ: С†РµРЅР°,
-РЅР°С…РѕР¶РґРµРЅРёРµ РЅР° РѕР±СЉРµРєС‚Рµ С‚РёРїР° \gloss{storage}, С…Р°СЂР°РєС‚РµСЂРёСЃС‚РёРєРё (С†РІРµС‚, СЂР°Р·РјРµСЂ Рё 
-РїСЂ.). Р”РѕСЃС‚СѓРїРЅРѕ РґР»СЏ РІС‹Р±РѕСЂР° РІ СЂР°Р·РґРµР»Р°С… 
-\ref{sec:goods_cart_stores} Рё \ref{sec:goods_cart_props}. РњР°РіР°Р·РёРЅ РїРѕР»СѓС‡Р°РµС‚ 
-РёРЅС„РѕСЂРјР°С†РёСЋ Рѕ РЅРёС… РІ СЂРµР·СѓР»СЊС‚Р°С‚Рµ РґРµР№СЃС‚РІРёСЏ \gloss{import1c}.
+word={Торговое предложение},
+definition={Элемент торгового каталога, содержащий индивидуальную информацию 
+о конкретной единице поощрения: цена,
+нахождение на объекте типа \gloss{storage}, характеристики (цвет, размер и 
+пр.). Доступно для выбора в разделах 
+\ref{sec:goods_cart_stores} и \ref{sec:goods_cart_props}. Магазин получает 
+информацию о них в результате действия \gloss{import1c}.
 }
 }
 
 
 @gd{XMLID,
-word={XML-ID РѕР±СЉРµРєС‚Р°},
-definition={РЈРЅРёРєР°Р»СЊРЅС‹Р№ РёРґРµРЅС‚РёРІРёРєР°С‚РѕСЂ Р»СЋР±РѕРіРѕ РѕР±СЉРµРєС‚Р° РјР°РіР°Р·РёРЅР° (С‚РѕРІР°СЂР°, 
-С‚РѕСЂРіРѕРІРѕРіРѕ РїСЂРµРґР»РѕР¶РµРЅРёСЏ,СЂР°Р·РґРµР»Р°, СЃРєР»Р°РґР° Рё РїСЂ.),
-РїРѕР·РІРѕР»СЏСЋС‰РёР№ СЃРёРЅС…СЂРѕРЅРёР·РёСЂРѕРІР°С‚СЊ РёРЅС„РѕСЂРјР°С†РёСЋ Рѕ РЅС‘Рј СЃ Р±Р°Р·РѕР№ РґР°РЅРЅС‹С… РЈРќР¤}
+word={XML-ID объекта},
+definition={Уникальный идентивикатор любого объекта магазина (товара, 
+торгового предложения,раздела, склада и пр.),
+позволяющий синхронизировать информацию о нём с базой данных УНФ}
 }
 
 
 @gd{UNF,
-word={1РЎ РЈРќР¤},
+word={1С УНФ},
 definition={
-РџСЂРѕРіСЂР°РјРјРЅРѕРµ РѕР±РµСЃРїРµС‡РµРЅРёРµ РґР»СЏ РІРµРґРµРЅРёСЏ Р±СѓС…РіР°Р»С‚РµСЂСЃРєРѕРіРѕ СѓС‡С‘С‚Р°. Р¦РµРЅС‚СЂР°Р»СЊРЅРѕРµ 
-С…СЂР°РЅРёР»РёС‰Рµ РёРЅС„РѕСЂРјР°С†РёРё РѕР± РѕР±СЉРµРєС‚Р°С… \gloss{storage}, \gloss{goods}, \gloss{offer}
+Программное обеспечение для ведения бухгалтерского учёта. Центральное 
+хранилище информации об объектах \gloss{storage}, \gloss{goods}, \gloss{offer}
 }
 }
 
 
 @gd{exchange1c,
-word={1РЎ РѕР±РјРµРЅ Р·Р°РєР°Р·Р°РјРё},
+word={1С обмен заказами},
 definition={
-РџРµСЂРµРґР°С‡Р° РёР· \gloss{shop} РІ \gloss{UNF} Рё РёР· \gloss{UNF} РІ \gloss{shop} РёРЅС„РѕСЂРјР°С†РёРё Рѕ 
-Р·Р°РєР°Р·Р°С… Рё РёР·РјРµРЅРµРЅРёРё РёС… СЃС‚Р°С‚СѓСЃР°. РћСЃСѓР¶РµС‚СЃРІР»СЏРµС‚СЃСЏ РїРѕСЃСЂРµРґСЃС‚РІРѕРј С„РѕСЂРјР°С‚Р° XML
+Передача из \gloss{shop} в \gloss{UNF} и из \gloss{UNF} в \gloss{shop} информации о 
+заказах и изменении их статуса. Осужетсвляется посредством формата XML
 }
 }
 
 @gd{import1c,
-word={1C РІС‹РіСЂСѓР·РєР° РєР°С‚Р°Р»РѕРіР°},
+word={1C выгрузка каталога},
 definition={
-РџРµСЂРµРґР°С‡Р° РёР· \gloss{UNF} РІ \gloss{shop} РёРЅС„РѕСЂРјР°С†РёРё Рѕ С‚РѕРІР°СЂР°С…, РїСЂРµРґР»РѕР¶РµРЅРёСЏС…, 
-СЃРєР»Р°РґР°С…, СЃРєР»Р°РґСЃРєРёС… РѕСЃС‚Р°С‚РєР°С…. 
-РћСЃСѓС‰РµСЃС‚РІР»СЏРµС‚СЃСЏ РїРµСЂРµРґР°С‡РµР№ Р°СЂС…РёРІР°, СЃРѕСЃС‚РѕСЏС‰РµРіРѕ РёР· С„Р°Р№Р»РѕРІ 
-offers.xml (РѕР±СЉРµРєС‚С‹ С‚РёРїР° \gloss{offer} Рё \gloss{storage}), import(РѕР±СЉРµРєС‚С‹ 
-С‚РёРїР° \gloss{goods}) 
-Рё С„Р°Р№Р»РѕРІ СЂРµСЃСѓСЂСЃРѕРІ (РёР·РѕР±СЂР°Р¶РµРЅРёР№ Рё РїСЂ.) 
+Передача из \gloss{UNF} в \gloss{shop} информации о товарах, предложениях, 
+складах, складских остатках. 
+Осуществляется передачей архива, состоящего из файлов 
+offers.xml (объекты типа \gloss{offer} и \gloss{storage}), import(объекты 
+типа \gloss{goods}) 
+и файлов ресурсов (изображений и пр.) 
 }
 }
 
 @gd{
 storage,
-word={РЎРєР»Р°Рґ},
+word={Склад},
 definition={
-Р РµР°Р»СЊРЅР°СЏ (РєРѕРЅРєСЂРµС‚РЅРѕРµ РїРѕРјРµС‰РµРЅРёРµ) РёР»Рё РІРёСЂС‚СѓР°Р»СЊРЅР°СЏ(СЌР»РµРєС‚СЂРѕРЅРЅС‹Р№ СЃРµСЂРІРёСЃ) С‚РѕС‡РєР° 
-РІС‹РґР°С‡Рё РїРѕРѕС‰СЂРµРЅРёР№.
-РњР°РіР°Р·РёРЅ РїРѕР»СѓС‡Р°РµС‚ РёРЅС„РѕСЂРјР°С†РёСЋ Рѕ РЅРёС… РІ СЂРµР·СѓР»СЊС‚Р°С‚Рµ РґРµР№СЃС‚РІРёСЏ \gloss{import1c}.}
+Реальная (конкретное помещение) или виртуальная(электронный сервис) точка 
+выдачи поощрений.
+Магазин получает информацию о них в результате действия \gloss{import1c}.}
 }
 
 @gd{
 AGSESSIONID,
-word={РђР“ SESSION ID},
+word={АГ SESSION ID},
 definition={
-ID СЃРµСЃСЃРёРё С‚РµРєСѓС‰РµРіРѕ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ, Р°РІС‚РѕСЂРёР·РѕРІР°РЅРЅРѕРіРѕ РЅР° \gloss{AG}
+ID сессии текущего пользователя, авторизованного на \gloss{AG}
 }
 }
 
 
 @gd{
 AGPROFILE,
-word={РђР“ РїСЂРѕС„РёР»СЊ},
+word={АГ профиль},
 definition={
-РџСЂРѕС„РёР»СЊ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ \gloss{AG}, СЃРѕРґРµСЂР¶Р°С‰РёР№ С‚РµР»РµС„РѕРЅ, email, Р¤РРћ, Рё РїСЂРѕС‡СѓСЋ 
-РёРЅС„РѕСЂРјР°С†РёСЋ, 
-РёРґРµРЅС‚РёС„РёС†РёСЂСѓСЋС‰РµРіРѕ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ РєР°Рє РєРѕРЅРєСЂРµС‚РЅРѕРіРѕ С‡РµР»РѕРІРµРєР°
+Профиль пользователя \gloss{AG}, содержащий телефон, email, ФИО, и прочую 
+информацию, 
+идентифицирующего пользователя как конкретного человека
 }
 }
 
 @gd{
 AGTRANSACT,
-word={РђР“ С‚СЂР°РЅР·Р°РєС†РёСЏ},
+word={АГ транзакция},
 definition={
-РђРєС‚ РЅР°С‡РёСЃР»РµРЅРёСЏ РёР»Рё СЃРїРёСЃР°РЅРёСЏ Р±Р°Р»Р»РѕРІ РїРѕР»СЊР·РѕРІР°С‚РµР»СЋ \gloss{AG} С‡РµСЂРµР· 
-\gloss{AGAPI}. Р—Р°РґР°С‘С‚СЃСЏ РїР°СЂР°РјРµС‚СЂР°РјРё:
-СЃСѓРјРјР°, РЅР°РїСЂР°РІР»РµРЅРёРµ СЃРїРёСЃР°РЅРёСЏ(РґРµР±РёС‚/РєСЂРµРґРёС‚), РєРѕРјРјРµРЅС‚Р°СЂРёР№.
+Акт начисления или списания баллов пользователю \gloss{AG} через 
+\gloss{AGAPI}. Задаётся параметрами:
+сумма, направление списания(дебит/кредит), комментарий.
 }
 }
 
 
 @gd{
 BXTRANSACT,
-word={Bitrix С‚СЂР°РЅР·Р°РєС†РёСЏ},
+word={Bitrix транзакция},
 definition={
-РђРєС‚ РЅР°С‡РёСЃР»РµРЅРёСЏ РёР»Рё СЃРїРёСЃР°РЅРёСЏ Р±Р°Р»Р»РѕРІ РЅР° РІРЅСѓС‚СЂРµРЅРЅРёР№ СЃС‡С‘С‚ РѕР±СЉРµРєС‚Сѓ 
-\\\gloss{BXUSER} С‡РµСЂРµР· \gloss{BXAPI}. Р—Р°РґР°С‘С‚СЃСЏ РїР°СЂР°РјРµС‚СЂР°РјРё:
-СЃСѓРјРјР°, РЅР°РїСЂР°РІР»РµРЅРёРµ СЃРїРёСЃР°РЅРёСЏ(РґРµР±РёС‚/РєСЂРµРґРёС‚), РєРѕРјРјРµРЅС‚Р°СЂРёР№, ID РѕР±СЉРµРєС‚Р° 
-\gloss{BXORDER}. РљР°Р¶РґС‹Р№ С‚Р°РєРѕР№ Р°РєС‚ РёРјРµРµС‚ Р°РЅР°Р»РѕРіРёС‡РЅС‹Р№ РµРјСѓ РѕР±СЉРµРєС‚
+Акт начисления или списания баллов на внутренний счёт объекту 
+\\\gloss{BXUSER} через \gloss{BXAPI}. Задаётся параметрами:
+сумма, направление списания(дебит/кредит), комментарий, ID объекта 
+\gloss{BXORDER}. Каждый такой акт имеет аналогичный ему объект
 \gloss{AGTRANSACT}.
 }
 }
@@ -184,39 +184,39 @@ definition={
 
 @gd{
 BXORDER,
-word={Bitrix Р·Р°РєР°Р·},
+word={Bitrix заказ},
 definition={
-РРЅС„РѕСЂРјР°С†РёСЏ Рѕ Р·Р°РєР°Р·Рµ, С…СЂР°РЅСЏС€РµРјСЃСЏ РІ Р‘Р” \gloss{shop}. РЎРѕРґРµСЂР¶РёС‚ РїР°СЂР°РјРµС‚СЂС‹: 
-\gloss{BXUSER}, РѕР±С‰Р°СЏ СЃСѓРјРјР° Р·Р°РєР°Р·Р°,
-РЅРѕРјРµСЂ Р·Р°РєР°Р·Р°, СЃРїРёСЃРѕРє Р·Р°РєР°Р·Р°РЅРЅС‹С… С‚РѕРІР°СЂРѕРІ(РЅР°РёРјРµРЅРѕРІР°РЅРёРµ, С†РµРЅР°, РєРѕР»РёС‡РµСЃС‚РІРѕ)
+Информация о заказе, храняшемся в БД \gloss{shop}. Содержит параметры: 
+\gloss{BXUSER}, общая сумма заказа,
+номер заказа, список заказанных товаров(наименование, цена, количество)
 }
 }
 
 
 @gd{
 shop,
-word={РњР’РђР“(bitrix)},
+word={МВАГ(bitrix)},
 definition={
-РњР°РіР°Р·РёРЅ РїРѕРѕС‰СЂРµРЅРёР№ РђРєС‚РёРІРЅС‹Р№ Р“СЂР°Р¶РґР°РЅРёРЅ РЅР° РїР»Р°С‚С„РѕСЂРјРµ CMS Bitrix.
+Магазин поощрений Активный Гражданин на платформе CMS Bitrix.
 }
 }
 
 
 @gd{
 AGAPI,
-word={РђР“ API},
+word={АГ API},
 definition={
-РџСЂРѕРіСЂР°РјРјРЅС‹Р№ РёРЅС‚РµСЂС„РµР№СЃ РґР»СЏ РїРѕР»СѓС‡РµРЅРёСЏ РёРЅС„РѕСЂРјР°С†РёРё Рѕ РїРѕР»СЊР·РѕРІР°С‚РµР»Рµ \gloss{AG}, 
-РѕСЃРЅРѕРІРЅРЅС‹Р№ РЅР° РїСЂРѕС‚РѕРєРѕР»Рµ http Рё JSON-С„РѕСЂРјР°С‚Рµ РѕР±РјРµРЅР° РґР°РЅРЅС‹РјРё.
+Программный интерфейс для получения информации о пользователе \gloss{AG}, 
+основнный на протоколе http и JSON-формате обмена данными.
 }
 }
 
 @gd{
 BXUSER,
-word={Bitrix-РїРѕР»СЊР·РѕРІР°С‚РµР»СЊ},
+word={Bitrix-пользователь},
 definition={
-РџРѕР»СЊР·РѕРІР°С‚РµР»СЊ 1C-Р‘РёС‚СЂРёРєСЃ (РЅРµ РїСѓС‚Р°С‚СЊ СЃ РїРѕР»СЊР·РѕРІР°С‚РµР»РµРј \gloss{AG}). РќРµРѕР±С…РѕРґРёРј 
-РґР»СЏ РЅРѕСЂРјР°Р»СЊРЅРѕРіРѕ С„СѓРЅРєС†РёРѕРЅРёСЂРѕРІР°РЅРёСЏ \gloss{CMS} Рё \gloss{BXAPI}
+Пользователь 1C-Битрикс (не путать с пользователем \gloss{AG}). Необходим 
+для нормального функционирования \gloss{CMS} и \gloss{BXAPI}
 }
 }
 
@@ -224,47 +224,47 @@ definition={
 BXAPI,
 word={Bitrix-API},
 definition={
-РЎРѕРІРѕРєСѓРїРЅРѕСЃС‚СЊ РєР»Р°СЃСЃРѕРІ Рё Р±РёР±Р»РёРѕС‚РµРє, СЃРѕСЃС‚Р°РІР»СЏСЋС‰РёС… СЏРґСЂРѕ 1РЎ-Р‘РёС‚СЂРёРє Рё 
-РѕР±РµСЃРїРµС‡РёРІР°СЋС‰РёС… РѕСЃРЅРѕРІРЅРѕР№ С„СѓРЅРєС†РёРѕРЅР°Р» \gloss{shop}
+Совокупность классов и библиотек, составляющих ядро 1С-Битрик и 
+обеспечивающих основной функционал \gloss{shop}
 }
 }
 
 
 @gd{
 quant,
-word={РљРІР°РЅС‚ РїРѕРѕС‰СЂРµРЅРёСЏ},
+word={Квант поощрения},
 definition={
-РњРёРЅРёРјР°Р»СЊРЅРѕ РІС‹РґР°РІР°РµРјР°СЏ РµРґРёРЅРёС†Р° РїРѕРѕС‰СЂРµРЅРёСЏ. Р”Р»СЏ РєР°Р¶РґРѕРіРѕ РїРѕРѕР¶СЂРµРЅРёСЏ Р·Р°РґР°С‘С‚СЃСЏ
-РёРЅРґРёРІРёРґСѓР°Р»СЊРЅРѕ. РќР°РїСЂРёРјРµСЂ 1 С€С‚СѓРєР°, 2 Р±РёР»РµС‚ (РґР»СЏ РїР°СЂРЅРѕРіРѕ РїРѕСЃРµС‰РµРЅРёСЏ РјСѓР·РµСЏ) РёР»Рё 128
-РїР°СЂРєРѕРІРѕС‡РЅС‹С… Р±Р°Р»Р»РѕРІ. РЎРѕРѕС‚РІРµС‚СЃС‚РІРµРЅРЅРѕ РІРѕР·РјРѕР¶РЅРѕ РїСЂРёРѕР±СЂРёС‚РµРЅРёРµ С‚РѕР»СЊРєРѕ РєСЂР°С‚РЅС‹С… РєРІР°РЅС‚Сѓ
-РїРѕРѕС‰СЂРµРЅРёСЏ РµРґРёРЅРёС† РїРѕРѕС‰СЂРµРЅРёСЏ.
+Минимально выдаваемая единица поощрения. Для каждого поожрения задаётся
+индивидуально. Например 1 штука, 2 билет (для парного посещения музея) или 128
+парковочных баллов. Соответственно возможно приобритение только кратных кванту
+поощрения единиц поощрения.
 }
 }
 
 @gd{
 mater_goods,
-word={РџРѕРѕС‰СЂРµРЅРёСЏ РјР°С‚РµСЂРёР°Р»СЊРЅС‹Рµ},
+word={Поощрения материальные},
 definition={
-РЎСѓРІРµРЅРёСЂРЅР°СЏ РїСЂРѕРґСѓРєС†РёСЏ, С‚РµС…РЅРёРєР°, РѕРґРµР¶РґР° Рё РїСЂРѕС‡РёРµ РїСЂРµРґРјРµС‚С‹ РїРѕС‚СЂРµР±Р»РµРЅРёСЏ, РґРѕСЃС‚СѓРїРЅС‹Рµ
-РґР»СЏ РїРѕР»СѓС‡РµРЅРёСЏ РІ РњР¤Р¦.
+Сувенирная продукция, техника, одежда и прочие предметы потребления, доступные
+для получения в МФЦ.
 }
 }
 
 @gd{
 nonmater_goods,
-word={РџРѕРѕС‰СЂРµРЅРёСЏ РЅРµРјР°С‚РµСЂРёР°Р»СЊРЅС‹Рµ},
+word={Поощрения нематериальные},
 definition={
-РџРѕСЃРµС‰РµРЅРёРµ РјРµСЂРѕРїСЂРёСЏС‚РёР№, РЅР°С‡РёСЃР»РµРЅРёСЏ РЅР° РєР°СЂС‚С‹, РІС‹РґР°С‡Р° Р°Р±РѕРЅРµРјРµРЅС‚РѕРІ Рё РїСЂРѕС‡РёРµ СѓСЃР»СѓРіРё,
-РґРѕСЃС‚СѓРїРЅС‹Рµ РґР»СЏ РїРѕР»СѓС‡РµРЅРёСЏ Сѓ СЃС‚РѕСЂРѕРЅРёС… РѕСЂРіР°РЅРёР·Р°С†РёР№, РёРјРµРЅСѓРµРјС‹С… РєР°Рє \gloss{partner_ag}
+Посещение мероприятий, начисления на карты, выдача абонементов и прочие услуги,
+доступные для получения у стороних организаций, именуемых как \gloss{partner_ag}
 }
 }
 
 @ag{
 partner_ag,
-word={РџРѕСЃС‚Р°РІС‰РёРє РђР“},
+word={Поставщик АГ},
 definition={
-РЎС‚РѕСЂРѕРЅРЅСЏСЏ РѕСЂРіР°РЅРёР·Р°С†РёСЏ, РїСЂРµРґРѕСЃС‚Р°РІР»СЏСЋС‰Р°СЏ СЂР°Р·Р»РёС‡РЅС‹Рµ СѓСЃР»СѓРіРё РґР»СЏ \gloss{AG}  РґР»СЏ
-РІС‹РґР°С‡Рё РїРѕР»СЊР·РѕРІР°С‚РµР»СЏРј \gloss{shop} РєР°Рє \gloss{nonmater_goods}
+Сторонняя организация, предоставляющая различные услуги для \gloss{AG}  для
+выдачи пользователям \gloss{shop} как \gloss{nonmater_goods}
 }
 }
 
