--- a/docs/manual/source/04_auth_funcs/index.tex
+++ b/docs/manual/source/04_auth_funcs/index.tex
@@ -1,459 +1,459 @@
-\chapter{Р¤СѓРЅРєС†РёРѕРЅР°Р» РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ РіСЂСѓРїРїС‹ <<Р°РІС‚РѕСЂРёР·РѕРІР°РЅРЅС‹Р№ РїРѕР»СЊР·РѕРІР°С‚РµР»СЊ>>.}
+\chapter{Функционал пользователя группы <<авторизованный пользователь>>.}
 
-РЎРј. \gloss{auth_user} РІ РіР»РѕСЃСЃР°СЂРёРё.
+См. \gloss{auth_user} в глоссарии.
 
-\section{РћР±С‰РёРµ СЌР»РµРјРµРЅС‚С‹ СЃС‚СЂР°РЅРёС†}
-\subsection{Р“Р»Р°РІРЅРѕРµ РјРµРЅСЋ}
+\section{Общие элементы страниц}
+\subsection{Главное меню}
 
-РЎРј. СЂРёСЃ. \ref{fig:auth_main_menu}
+См. рис. \ref{fig:auth_main_menu}
 
-Р’СЃРµ С‚Рѕ Р¶Рµ, С‡С‚Рѕ Сѓ РЅРµР°РІС‚РѕСЂРёР·РѕРІР°РЅРЅРѕРіРѕ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ (СЃРј.\ref{
-ec:baseitems_main_meu}), РїР»СЋСЃ РїСѓРЅРєС‚ <<РїСЂРѕС„РёР»СЊ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ>> СЃРѕ
-СЃР»РµРґСѓСЋС‰РёРјРё СЌР»РµРјРµРЅС‚Р°РјРё: 
+Все то же, что у неавторизованного пользователя (см.\ref{
+ec:baseitems_main_meu}), плюс пункт <<профиль пользователя>> со
+следующими элементами: 
 \begin{enumerate}
-\item Р¤РРћ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ.
-\item РљРѕР»РёС‡РµСЃС‚РІРѕ Р±Р°Р»Р»РѕРІ.
+\item ФИО пользователя.
+\item Количество баллов.
 \end{enumerate}
 
 
         \begin{figure}
             \center
             \includegraphics[width=170mm]{04_auth_funcs/figures/01.eps}
-            \caption{Р“Р»Р°РІРЅРѕРµ РјРµРЅСЋ Р°РІС‚РѕСЂРёР·РѕРІР°РЅРЅРѕРіРѕ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ}
+            \caption{Главное меню авторизованного пользователя}
             \label{fig:auth_main_menu}
         \end{figure}
         
-        \subsection{Р¤РёР»СЊС‚СЂ РїРѕ С†РµРЅРµ Рё РёРЅС‚РµСЂРµСЃР°Рј}
+        \subsection{Фильтр по цене и интересам}
 
-            РЎРј. СЂРёСЃ. \ref{fig:auth_filter}
+            См. рис. \ref{fig:auth_filter}
 
-            Р’РјРµСЃС‚Рѕ СЃСЃС‹Р»РєРё РЅР° Р°РІС‚РѕСЂРёР·Р°С†РёСЋ (СЃРј. 
-            \ref{sec:noauth_filter_points}) РїРѕСЏРІР»СЏРµС‚СЃСЏ РґРѕРїРѕР»РЅРёС‚РµР»СЊРЅР°СЏ РІРєР»Р°РґРєР°
-            <<Сѓ РјРµРЅСЏ N Р±Р°Р»Р»РѕРІ>>, Р·Р°РґР°СЋС‰Р°СЏ РґРёР°РїР°Р·РѕРЅ С„РёР»СЊС‚СЂР°С†РёРё С‚РѕРІР°СЂРѕРІ РїРѕ 
-            Р±Р°Р»Р»Р°Рј.
+            Вместо ссылки на авторизацию (см. 
+            \ref{sec:noauth_filter_points}) появляется дополнительная вкладка
+            <<у меня N баллов>>, задающая диапазон фильтрации товаров по 
+            баллам.
             
             \begin{enumerate}
-                \item РџРѕ СѓРјРѕР»С‡Р°РЅРёСЋ РІС‹СЃС‚Р°РІР»СЏРµС‚СЃСЏ С‡РёСЃР»Рѕ Р±Р°Р»Р»РѕРІ РѕС‚ РЅСѓР»СЏ РґРѕ 
-                РєРѕР»РёС‡РµСЃС‚РІР°, РєРѕС‚РѕСЂРѕРµ РµСЃС‚СЊ Сѓ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ.
-                \item Р•СЃС‚СЊ СЌР»РµРјРµРЅС‚, РїРѕР·РІРѕР»СЏСЋС‰РёР№ С„РёР»СЊС‚СЂРѕРІР°С‚СЊ С‚РѕРІР°СЂС‹ 
-                РЅРµР·Р°РІРёСЃРёРјРѕ РѕС‚ РєРѕР»РёС‡РµСЃС‚РІР° Р±Р°Р»Р»РѕРІ Сѓ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ <<РІСЃРµ Р±Р°Р»Р»С‹>>.
-                \item РћСЃС‚Р°Р»СЊРЅС‹Рµ СЌР»РµРјРµРЅС‚С‹ СѓРїСЂР°РІР»РµРЅРёСЏ Р·Р°РґР°СЋС‚ РґРёР°РїР°Р·РѕРЅС‹ РјРµР¶РґСѓ 
-                РїРѕСЂСЏРґРєР°РјРё С†РµРЅ (0$\dots$10, 11$\dots$100 Рё С‚.Рґ.).
-                \item Р’С‹Р±СЂР°С‚СЊ РјРѕР¶РЅРѕ С‚РѕР»СЊРєРѕ РѕРґРёРЅ РґРёР°РїР°Р·РѕРЅ.
+                \item По умолчанию выставляется число баллов от нуля до 
+                количества, которое есть у пользователя.
+                \item Есть элемент, позволяющий фильтровать товары 
+                независимо от количества баллов у пользователя <<все баллы>>.
+                \item Остальные элементы управления задают диапазоны между 
+                порядками цен (0$\dots$10, 11$\dots$100 и т.д.).
+                \item Выбрать можно только один диапазон.
             \end{enumerate}
 
             
             \begin{figure}
                 \center
                 \includegraphics[width=170mm]{04_auth_funcs/figures/02.eps}
-                \caption{Р¤РёР»СЊС‚СЂ РїРѕ РєРѕР»РёС‡РµСЃС‚РІСѓ Р±Р°Р»Р»РѕРІ}
+                \caption{Фильтр по количеству баллов}
                 \label{fig:auth_filter}
             \end{figure}
         
-        \subsection{РўРёР·РµСЂ С‚РѕРІР°СЂР°}
+        \subsection{Тизер товара}
             \label{sec:auth_tizer}
-            РЎРј. СЂРёСЃ. \ref{fig:auth_tizer}
+            См. рис. \ref{fig:auth_tizer}
         
-            Р•РґРёРЅСЃС‚РІРµРЅРЅРѕРµ РѕС‚Р»РёС‡РёРµ РѕС‚ С‚РёР·РµСЂР° С‚РѕРІР°СЂР° РґР»СЏ РЅРµР°РІС‚РѕСЂРёР·РѕРІР°РЅРЅРѕРіРѕ 
-            РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ (СЃРј. \ref{sec:noauth_tizer})
-            --- СЌС‚Рѕ Р°РєС‚РёРІРЅР°СЏ СЃСЃС‹Р»РєР° <<Р¶РµР»Р°РЅРёРµ>>.
+            Единственное отличие от тизера товара для неавторизованного 
+            пользователя (см. \ref{sec:noauth_tizer})
+            --- это активная ссылка <<желание>>.
             \begin{enumerate}
-                \item РўРѕРІР°СЂ РјРѕР¶РЅРѕ РґРѕР±Р°РІРёС‚СЊ РІ <<РјРѕРё Р¶РµР»Р°РЅРёСЏ>> РєР»РёРєРѕРј РїРѕ 
-                <<СЃРµСЂРґРµС‡РєСѓ>>
-                \item РЎРµСЂРґРµС‡РєРѕ С‚РѕРІР°СЂР°, РґРѕР±Р°РІР»РµРЅРЅРѕРіРѕ РІ <<РјРѕРё Р¶РµР»Р°РЅРёСЏ>> 
-                Р·Р°Р»РёРІР°РµС‚СЃСЏ РєСЂР°СЃРЅС‹Рј.
-                \item РўРѕРІР°СЂ, РґРѕР±Р°РІР»РµРЅРЅС‹Р№ РІ <<РјРѕРё Р¶РµР»Р°РЅРёСЏ>> РїРѕСЏРІР»СЏРµС‚СЃСЏ РІ 
-                СЃРѕРѕС‚РІРµС‚СЃС‚РІСѓСЋС‰РµРј СЂР°Р·РґРµР»Рµ (СЃРј.\ref{sec:auth_my_wishes}).
+                \item Товар можно добавить в <<мои желания>> кликом по 
+                <<сердечку>>
+                \item Сердечко товара, добавленного в <<мои желания>> 
+                заливается красным.
+                \item Товар, добавленный в <<мои желания>> появляется в 
+                соответствующем разделе (см.\ref{sec:auth_my_wishes}).
             \end{enumerate}
 
         
             \begin{figure}
                 \center
                 \includegraphics[width=170mm]{04_auth_funcs/figures/03.eps}
-                \caption{РўРёР·РµСЂ С‚РѕРІР°СЂР° РґР»СЏ Р°РІС‚РѕСЂРёР·РѕРІР°РЅРЅРѕРіРѕ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ.}
+                \caption{Тизер товара для авторизованного пользователя.}
                 \label{fig:auth_tizer}
             \end{figure}
         
         
-    \section{Р“Р»Р°РІРЅР°СЏ СЃС‚СЂР°РЅРёС†Р°}
-        \subsection{Р‘Р°РЅРµСЂ-СЃР»Р°Р№РґРµСЂ}
+    \section{Главная страница}
+        \subsection{Банер-слайдер}
         
-            РЎРј. СЂРёСЃ. \ref{fig:auth_slide_goods}
+            См. рис. \ref{fig:auth_slide_goods}
 
-            Р•РґРёРЅСЃС‚РІРµРЅРЅРѕРµ РѕС‚Р»РёС‡РёРµ РѕС‚ СЃР»Р°Р№РґР°-С‚РѕРІР°СЂР° РґР»СЏ РЅРµР°РІС‚РѕСЂРёР·РѕРІР°РЅРЅРѕРіРѕ 
-            РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ (СЃРј. \ref{sec:noauth_slide_goods})
-            --- СЌС‚Рѕ Р°РєС‚РёРІРЅР°СЏ СЃСЃС‹Р»РєР° <<Р¶РµР»Р°РЅРёРµ>>.
+            Единственное отличие от слайда-товара для неавторизованного 
+            пользователя (см. \ref{sec:noauth_slide_goods})
+            --- это активная ссылка <<желание>>.
             
             \begin{enumerate}
-                \item РўРѕРІР°СЂ РјРѕР¶РЅРѕ РґРѕР±Р°РІРёС‚СЊ РІ <<РјРѕРё Р¶РµР»Р°РЅРёСЏ>> РєР»РёРєРѕРј РїРѕ 
-                <<СЃРµСЂРґРµС‡РєСѓ>>
-                \item РЎРµСЂРґРµС‡РєРѕ С‚РѕРІР°СЂР°, РґРѕР±Р°РІР»РµРЅРЅРѕРіРѕ РІ <<РјРѕРё Р¶РµР»Р°РЅРёСЏ>> 
-                Р·Р°Р»РёРІР°РµС‚СЃСЏ РєСЂР°СЃРЅС‹Рј.
-                \item РўРѕРІР°СЂ, РґРѕР±Р°РІР»РµРЅРЅС‹Р№ РІ <<РјРѕРё Р¶РµР»Р°РЅРёСЏ>> РїРѕСЏРІР»СЏРµС‚СЃСЏ РІ 
-                СЃРѕРѕС‚РІРµС‚СЃС‚РІСѓСЋС‰РµРј СЂР°Р·РґРµР»Рµ (СЃРј.\ref{sec:auth_my_wishes}).
+                \item Товар можно добавить в <<мои желания>> кликом по 
+                <<сердечку>>
+                \item Сердечко товара, добавленного в <<мои желания>> 
+                заливается красным.
+                \item Товар, добавленный в <<мои желания>> появляется в 
+                соответствующем разделе (см.\ref{sec:auth_my_wishes}).
             \end{enumerate}
             
             \begin{figure}
                 \center
                 \includegraphics[width=170mm]{04_auth_funcs/figures/04.eps}
-                \caption{РЎР»Р°Р№Рґ-С‚РѕРІР°СЂ РґР»СЏ Р°РІС‚РѕСЂРёР·РѕРІР°РЅРЅРѕРіРѕ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ.}
+                \caption{Слайд-товар для авторизованного пользователя.}
                 \label{fig:auth_slide_goods}
             \end{figure}
         
         
-     \section{РљР°СЂС‚РѕС‡РєР° С‚РѕРІР°СЂР°}
+     \section{Карточка товара}
 
-        РЎРј. СЂРёСЃ. \ref{fig:auth_goods_cart}
+        См. рис. \ref{fig:auth_goods_cart}
             \begin{figure}
                 \center
                 \includegraphics[width=170mm]{04_auth_funcs/figures/05.eps}
-                \caption{РљР°СЂС‚РѕС‡РєР° С‚РѕРІР°СЂР° РґР»СЏ Р°РІС‚РѕСЂРёР·РѕРІР°РЅРЅРѕРіРѕ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ}
+                \caption{Карточка товара для авторизованного пользователя}
                 \label{fig:auth_goods_cart}
             \end{figure}
                 
  
-        Р¤СѓРЅРєС†РёРѕРЅР°Р» РєР°СЂС‚РѕС‡РєРё С‚РѕРІР°СЂРѕРІ РґР»СЏ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ РіСЂСѓРїРїС‹ \gloss{auth_user}
-        РёРґРµРЅС‚РёС‡РµРЅ РѕРїРёСЃР°РЅРЅРѕРјСѓ РІ СЂР°Р·РґРµР»Рµ \ref{sec:goods_cart}, Р·Р° РёСЃРєР»СЋС‡РµРЅРёРµРј
-        РїРѕСЏРІР»РµРЅРёСЏ Рё РёР·РјРµРЅРµРЅРёСЏ РЅРµСЃРєРѕР»СЊРєРёС… СЌР»РµРјРµРЅС‚РѕРІ, РѕРїРёСЃР°РЅРЅС‹С… РЅРёР¶Рµ.
+        Функционал карточки товаров для пользователя группы \gloss{auth_user}
+        идентичен описанному в разделе \ref{sec:goods_cart}, за исключением
+        появления и изменения нескольких элементов, описанных ниже.
      
-        \subsection{РЎРєР»Р°Рґ РІС‹РґР°С‡Рё}\label{sec:auth_cart_store}
+        \subsection{Склад выдачи}\label{sec:auth_cart_store}
 
-            РђРЅР°Р»РѕРіРёС‡РµРЅ \ref{sec:goods_cart_stores}, Р·Р° РёСЃРєР»СЋС‡РµРЅРёРµРј С‚РѕРіРѕ, С‡С‚Рѕ 
-            РІС‹Р±РѕСЂ РєРѕРЅРєСЂРµС‚РЅРѕРіРѕ СЃРєР»Р°РґР° РїСЂРё Р·Р°РєР°Р·Рµ Р±СѓРґРµС‚ РѕР·РЅР°С‡Р°С‚СЊ РїРѕР»СѓС‡РµРЅРёРµ 
-            РїРѕРѕС‰СЂРµРЅРёСЏ РёРјРµРЅРЅРѕ СЃ РЅРµРіРѕ.
+            Аналогичен \ref{sec:goods_cart_stores}, за исключением того, что 
+            выбор конкретного склада при заказе будет означать получение 
+            поощрения именно с него.
 
-        \subsection{РљРѕР»РёС‡РµСЃС‚РІРѕ Р·Р°РєР°Р·С‹РІР°РµРјС‹С… РµРґРёРЅРёС†}
+        \subsection{Количество заказываемых единиц}
             \begin{enumerate}
-                \item РџРѕ СѓРјРѕР»С‡Р°РЅРёСЋ РґР»СЏ Р·Р°РєР°Р·Р° СѓСЃС‚Р°РЅРѕРІР»РµРЅ РѕРґРёРЅ \gloss{quant}.
-                \item РљРѕР»РёС‡РµСЃС‚РІРѕ Р·Р°РєР°Р·С‹РІР°РµРјС‹С… РєРІР°РЅС‚РѕРІ РїРѕРѕС‰СЂРµРЅРёСЏ РЅРµ РјРѕР¶РµС‚ Р±С‹С‚СЊ
-                Р±РѕР»СЊС€Рµ РґРѕСЃС‚СѓРїРЅС‹С… РЅР° РІС‹Р±СЂР°РЅРЅРѕРј(СЃРј.\ref{sec:auth_cart_store}) 
-                СЃРєР»Р°РґРµ
-                \item РџСЂРё РёР·РјРµРЅРµРЅРёРё РєРѕР»РёС‡РµСЃС‚РІР° Р·Р°РєР°Р·С‹РІР°РµРјС‹С… РєРІР°РЅС‚РѕРІ
-                Р°РІС‚РѕРјР°С‚РёС‡РµСЃРєРё РїРµСЂРµСЃС‡РёС‚С‹РІР°РµС‚СЃСЏ РѕР±С‰Р°СЏ СЃСѓРјРјР° Р·Р°РєР°Р·Р° РІ СЃС‚РѕР»Р±С†Рµ <<РёС‚
-                РѕРіРѕ>>.  \item РљРѕР»РёС‡РµСЃС‚РІРѕ Р·Р°РєР°Р·С‹РІР°РµРјС‹С… РєРІР°РЅС‚РѕРІ РїРѕРѕС‰СЂРµРЅРёСЏ РЅРµ 
-                РјРѕР¶РµС‚ Р±С‹С‚СЊ Р±РѕР»СЊС€Рµ, С‡РµРј РїРѕР»СЊР·РѕРІР°С‚РµР»СЊ РјРѕР¶РµС‚ СЃРµР±Рµ РїРѕР·РІРѕР»РёС‚СЊ 
-                РёСЃС…РѕРґСЏ РёР· РёРјРµСЋС‰РёС…СЃСЏ Сѓ РЅРµРіРѕ Р±Р°Р»Р»РѕРІ.
+                \item По умолчанию для заказа установлен один \gloss{quant}.
+                \item Количество заказываемых квантов поощрения не может быть
+                больше доступных на выбранном(см.\ref{sec:auth_cart_store}) 
+                складе
+                \item При изменении количества заказываемых квантов
+                автоматически пересчитывается общая сумма заказа в столбце <<ит
+                ого>>.  \item Количество заказываемых квантов поощрения не 
+                может быть больше, чем пользователь может себе позволить 
+                исходя из имеющихся у него баллов.
             \end{enumerate}
             
-        \subsection{РљРЅРѕРїРєР° Р·Р°РєР°Р·Р°}
+        \subsection{Кнопка заказа}
 
             \begin{enumerate}
-                \item РќРµРґРѕСЃС‚СѓРїРЅР°, РµСЃР»Рё РѕР±С‰Р°СЏ СЃСѓРјРјР° Р·Р°РєР°Р·Р° РїСЂРµРІС‹С€Р°РµС‚ РєРѕР»РёС‡РµСЃС‚РІРѕ
-                РёРјРµСЋС‰РёС…СЃСЏ Сѓ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ Р±Р°Р»Р»РѕРІ.
-                \item РќР° РєРЅРѕРїРєРµ Р·Р°РєР°Р·Р° РѕС‚РѕР±СЂР°Р¶Р°РµС‚СЃСЏ РѕР±С‰Р°СЏ СЃС‚РѕРёРјРѕСЃС‚СЊ Р·Р°РєР°Р·Р° Рё
-                РґСѓР±Р»РёСЂСѓРµС‚ СЃРѕРґРµСЂР¶РёРјРѕРµ 
-                \item РџСЂРё РЅР°Р¶Р°С‚РёРё РІС‹Р·С‹РІР°РµС‚СЃСЏ РѕРєРЅРѕ РїРѕРґС‚РІРµСЂР¶РґРµРЅРёСЏ Р·Р°РєР°Р·Р°
-                (СЃРј.\ref{sec:auth_cart_confirm}).
+                \item Недоступна, если общая сумма заказа превышает количество
+                имеющихся у пользователя баллов.
+                \item На кнопке заказа отображается общая стоимость заказа и
+                дублирует содержимое 
+                \item При нажатии вызывается окно подтверждения заказа
+                (см.\ref{sec:auth_cart_confirm}).
             \end{enumerate}
 
-        \subsection{Р¤РѕСЂРјР° РїРѕРґС‚РІРµСЂР¶РґРµРЅРёСЏ Р·Р°РєР°Р·Р°}\label{sec:auth_cart_confirm}
-            РЎРј. СЂРёСЃ. \ref{fig:auth_cart_confirm}
+        \subsection{Форма подтверждения заказа}\label{sec:auth_cart_confirm}
+            См. рис. \ref{fig:auth_cart_confirm}
             \begin{figure}
                 \center
                 \includegraphics[width=100mm]{04_auth_funcs/figures/07.eps}
-                \caption{РџРѕРґС‚РІРµСЂР¶РґРµРЅРёРµ Р·Р°РєР°Р·Р°}
+                \caption{Подтверждение заказа}
                 \label{fig:auth_cart_confirm}
             \end{figure}
  
-            РРјРµРµС‚ СЃР»РµРґСѓСЋС‰РёРµ РїРѕР»СЏ:
+            Имеет следующие поля:
 
             \begin{enumerate}
-                \item \textbf{Р·Р°РєР°Р·} --- РЅР°РёРјРµРЅРѕРІР°РЅРёРµ РїРѕРѕС‰СЂРµРЅРёСЏ;
-                \item \textbf{С†РµРЅР°} -- С†РµРЅР° РѕРґРЅРѕРіРѕ РєРІР°РЅС‚Р° РїРѕРѕС‰СЂРµРЅРёСЏ;
-                \item \textbf{РµРґРёРЅРёС†Р°} --- СЃРј.\gloss{quant};
-                \item \textbf{РєРѕР»РёС‡РµСЃС‚РІРѕ} -- РєРѕР»РёС‡РµСЃС‚РІРѕ РєРІР°РЅС‚РѕРІ РїРѕРѕС‰СЂРµРЅРёСЏ;
-                \item \textbf{СЃС‚РѕРёРјРѕСЃС‚СЊ} -- РѕР±С‰Р°СЏ СЃС‚РѕРёРјРѕСЃС‚СЊ Р·Р°РєР°Р·Р°;
-                \item \textbf{РїРѕР»СѓС‡РµРЅРёРµ} -- \gloss{storage}, СЃ РєРѕС‚РѕСЂРѕРіРѕ
-                РЅРµРѕР±С…РѕРґРёРјРѕ Р±СѓРґРµС‚ Р·Р°Р±СЂР°С‚СЊ РїРѕРѕС‰СЂРµРЅРёРµ;
-                \item СЃРѕРѕР±С‰РµРЅРёРµ Рѕ РЅРµРІРѕР·РјРѕР¶РЅРѕСЃС‚Рё РІРѕР·РІРІСЂР°С‚Р° Р±Р°Р»Р»РѕРІ, РµСЃР»Рё РѕС‚РјРµРЅР°
-                Р·Р°РєР°Р·Р° РґР»СЏ РґР°РЅРЅРѕРіРѕ РїРѕРѕС‰СЂРµРЅРёСЏ РЅРµ РїСЂРµРґСѓСЃРјРѕС‚СЂРµРЅР°.
+                \item \textbf{заказ} --- наименование поощрения;
+                \item \textbf{цена} -- цена одного кванта поощрения;
+                \item \textbf{единица} --- см.\gloss{quant};
+                \item \textbf{количество} -- количество квантов поощрения;
+                \item \textbf{стоимость} -- общая стоимость заказа;
+                \item \textbf{получение} -- \gloss{storage}, с которого
+                необходимо будет забрать поощрение;
+                \item сообщение о невозможности возвврата баллов, если отмена
+                заказа для данного поощрения не предусмотрена.
             \end{enumerate}
 
-            РџРѕСЃР»Рµ СѓСЃРїРµС€РЅРѕРіРѕ РїРѕРґС‚РІРµСЂР¶РґРµРЅРёСЏ Р·Р°РєР°Р·Р° РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ РїРµСЂРµРЅР°РїСЂР°РІР»СЏРµС‚ РІ
-            СЂР°Р·РґРµР» <<РњРѕРё Р·Р°РєР°Р·С‹>> (СЃРј.\ref{sec:auth_my_orders}).
+            После успешного подтверждения заказа пользователя перенаправляет в
+            раздел <<Мои заказы>> (см.\ref{sec:auth_my_orders}).
 
-        \subsection{РћС‚Р·С‹РІС‹}
+        \subsection{Отзывы}
 
-            РЎРј. СЂРёСЃ. \ref{fig:auth_goods_cart_otz}
+            См. рис. \ref{fig:auth_goods_cart_otz}
 
-            РћС‚РѕР±СЂР°Р¶РµРЅРёРµ СЃРїРёСЃРєР° РѕС‚Р·С‹РІРѕРІ Р°РЅР°Р»РѕРіРёС‡РЅРѕ С‚Р°РєРѕРІРѕРјСѓ Сѓ РЅРµР°РІС‚РѕСЂРёР·РѕРІР°РЅРЅРѕРіРѕ
-            РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ (СЃРј.\ref{sec:noauth_otz}), РЅРѕ РїРѕСЏРІР»СЏРµС‚СЃСЏ РІРѕР·РјРѕР¶РЅРѕСЃС‚СЊ 
-            РґРѕР±Р°РІРёС‚СЊ СЃРІРѕР№ РѕС‚Р·С‹РІ С‡РµСЂРµР· С„РѕСЂРјСѓ.
+            Отображение списка отзывов аналогично таковому у неавторизованного
+            пользователя (см.\ref{sec:noauth_otz}), но появляется возможность 
+            добавить свой отзыв через форму.
 
-            \subsubsection{Р¤РѕСЂРјР° РґРѕР±Р°РІР»РµРЅРёСЏ РѕС‚Р·С‹РІР°}
+            \subsubsection{Форма добавления отзыва}
             \label{sec:auth_goods_cart_otz_form}
                 
                 \begin{enumerate}
-                    \item РџРѕР»СЊР·РѕРІР°С‚РµР»СЊ РјРѕР¶РµС‚ РґРѕР±Р°РІРёС‚СЊ РѕС‚Р·С‹РІ Рє С‚РѕРІР°СЂСѓ С‚РѕР»СЊРєРѕ 
-                    РѕРґРёРЅ СЂР°Р·
-                    \item РџРѕР»СЊР·РѕРІР°С‚РµР»СЊ РјРѕР¶РµС‚ РґРѕР±Р°РІРёС‚СЊ РѕС‚Р·С‹Р·, С‚Р»СЊРєРѕ РµСЃР»Рё 
-                    РїРѕСЃС‚Р°РІРёР» РѕС†РµРЅРєСѓ.
+                    \item Пользователь может добавить отзыв к товару только 
+                    один раз
+                    \item Пользователь может добавить отзыз, тлько если 
+                    поставил оценку.
                 \end{enumerate}
 
            \begin{figure}
                 \center
                 \includegraphics[width=170mm]{04_auth_funcs/figures/06.eps}
-                \caption{Р”РѕР±Р°РІР»РµРЅРёРµ РѕС‚Р·С‹РІР° РґР»СЏ Р°РІС‚РѕСЂРёР·РѕРІР°РЅРЅРѕРіРѕ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ}
+                \caption{Добавление отзыва для авторизованного пользователя}
                 \label{fig:auth_goods_cart_otz}
             \end{figure}
 
                
-     \section{РџСЂРѕС„РёР»СЊ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ}
+     \section{Профиль пользователя}
 
-        \subsection{РњРѕРё Р·Р°РєР°Р·С‹}\label{sec:auth_my_orders}
+        \subsection{Мои заказы}\label{sec:auth_my_orders}
 
-            Р”Р°РЅРЅС‹Р№ СЂР°Р·РґРµР» РґРѕСЃС‚СѓРїРµРЅ С‚РѕР»СЊРєРѕ РїРѕР»СЊР·РѕРІР°С‚РµР»СЋ РіСЂСѓРїРїС‹ \gloss{auth_user}
-            Рё СЃРѕРґРµСЂР¶РёС‚ РёРЅС„РѕСЂРјР°С†РёСЋ Рѕ СЃРѕСЃС‚РѕСЏРЅРёРё Р»СЋР±РѕРіРѕ РµРіРѕ Р·Р°РєР°Р·Р°.
+            Данный раздел доступен только пользователю группы \gloss{auth_user}
+            и содержит информацию о состоянии любого его заказа.
 
-            \subsubsection{РЎС‚Р°С‚СѓСЃС‹ Р·Р°РєР°Р·РѕРІ}\label{sec:auth_order_statuses}
+            \subsubsection{Статусы заказов}\label{sec:auth_order_statuses}
             
             \begin{itemize}
-                \item \textbf{Р’ СЂР°Р±РѕС‚Рµ} - Р·Р°РєР°Р· СЃРґРµР»Р°РЅ С‡РµСЂРµР· СЃР°Р№С‚ Рё РѕР¶РёРґР°РµС‚ 
-                РІС‹РґР°С‡Рё
-                \item \textbf{Р’С‹РїРѕР»РЅРµРЅ} - Р·Р°РєР°Р· РІС‹РґР°РЅ
-                \item \textbf{Р‘СЂР°Рє} - РІРѕР·РІСЂР°С‚ Р·Р°РєР°Р·Р° РїРѕ РїСЂРёС‡РёРЅРµ Р±СЂР°РєР°
-                \item \textbf{РћС‚РјРµРЅРµРЅ} - РѕС‚РјРµРЅР° Р·Р°РєР°Р·Р° РїРѕР»СЊР·РѕРІР°С‚РµР»РµРј
-                \item \textbf{РђРЅРЅСѓР»РёСЂРѕРІР°РЅ} - РѕС‚РјРµРЅР° Р·Р°РєР°Р·Р° Р·Р° РёСЃС‚РµС‡РµРЅРёРµРј 
-                СЃСЂРѕРєР° РїРѕР»СѓС‡РµРЅРёСЏ
-                (СЃРј. \ref{sec:goods_expires})
+                \item \textbf{В работе} - заказ сделан через сайт и ожидает 
+                выдачи
+                \item \textbf{Выполнен} - заказ выдан
+                \item \textbf{Брак} - возврат заказа по причине брака
+                \item \textbf{Отменен} - отмена заказа пользователем
+                \item \textbf{Аннулирован} - отмена заказа за истечением 
+                срока получения
+                (см. \ref{sec:goods_expires})
 
             \end{itemize}
 
-            \subsubsection{Р’РєР»Р°РґРєР° <<РјРѕРіСѓ РёСЃРїРѕР»СЊР·РѕРІР°С‚СЊ>>}
-            РЎРј СЂРёСЃ. \ref{fig:auth_orders_may_use}
+            \subsubsection{Вкладка <<могу использовать>>}
+            См рис. \ref{fig:auth_orders_may_use}
 
-            Р’ РЅРµР№ РѕС‚РѕР±СЂР°Р¶РµРЅС‹ Р·Р°РєР°Р·С‹, РЅР°С…РѕРґСЏС‰РµСЃСЏ РІ СЃС‚Р°С‚СѓСЃРµ <<Р’ СЂР°Р±РѕС‚Рµ>> (СЃРј.
+            В ней отображены заказы, находящеся в статусе <<В работе>> (см.
             \ref{sec:auth_order_statuses}).
 
             \begin{figure}
                 \center
                 \includegraphics[width=100mm]{04_auth_funcs/figures/08.eps}
-                \caption{Р”РѕР±Р°РІР»РµРЅРёРµ РѕС‚Р·С‹РІР° РґР»СЏ Р°РІС‚РѕСЂРёР·РѕРІР°РЅРЅРѕРіРѕ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ}
+                \caption{Добавление отзыва для авторизованного пользователя}
                 \label{fig:auth_orders_may_use}
             \end{figure}
 
-            \subsubsection{Р’РєР»Р°РґРєР° <<СѓР¶Рµ РёСЃРїРѕР»СЊР·РѕРІР°Р»>>}
+            \subsubsection{Вкладка <<уже использовал>>}
             \label{sec:auth_orders_already_use}
-            РЎРј СЂРёСЃ. \ref{fig:auth_orders_already_use}
+            См рис. \ref{fig:auth_orders_already_use}
 
-            Р’ РЅРµР№ РѕС‚РѕР±СЂР°Р¶РµРЅС‹ Р·Р°РєР°Р·С‹, РЅР°С…РѕРґСЏС‰РµСЃСЏ РІ СЃС‚Р°С‚СѓСЃР°С…Рµ
-            <<РІС‹РїРѕР»РЅРµРЅ>>, <<Р±СЂР°Рє>>, <<РѕС‚РјРµРЅС‘РЅ>>, <<Р°РЅРЅСѓР»РёСЂРѕРІР°РЅ>> (СЃРј.
+            В ней отображены заказы, находящеся в статусахе
+            <<выполнен>>, <<брак>>, <<отменён>>, <<аннулирован>> (см.
             \ref{sec:auth_order_statuses}).
 
             \begin{figure}
                 \center
                 \includegraphics[width=100mm]{04_auth_funcs/figures/09.eps}
-                \caption{Р”РѕР±Р°РІР»РµРЅРёРµ РѕС‚Р·С‹РІР° РґР»СЏ Р°РІС‚РѕСЂРёР·РѕРІР°РЅРЅРѕРіРѕ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ}
+                \caption{Добавление отзыва для авторизованного пользователя}
                 \label{fig:auth_orders_already_use}
             \end{figure}
 
-            \subsubsection{Р’РєР»Р°РґРєР° <<РІСЃРµ Р·Р°РєР°Р·С‹>>}
+            \subsubsection{Вкладка <<все заказы>>}
                 \par{
-                РЎРј СЂРёСЃ. \ref{fig:auth_orders_all_use}
+                См рис. \ref{fig:auth_orders_all_use}
 
-                Р’ СЌС‚РѕР№ РІРєР»Р°РґРєРµ РѕС‚РѕР±СЂР°Р¶Р°СЋС‚СЃСЏ РІСЃРµ Р·Р°РєР°Р·С‹ РІРѕ РІСЃРµС… СЃС‚Р°С‚СѓСЃР°С…
-                (СЃРј. \ref{sec:auth_order_statuses})
+                В этой вкладке отображаются все заказы во всех статусах
+                (см. \ref{sec:auth_order_statuses})
                 }
             \begin{figure}
                 \center
                 \includegraphics[width=100mm]{04_auth_funcs/figures/10.eps}
-                \caption{Р”РѕР±Р°РІР»РµРЅРёРµ РѕС‚Р·С‹РІР° РґР»СЏ Р°РІС‚РѕСЂРёР·РѕРІР°РЅРЅРѕРіРѕ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ}
+                \caption{Добавление отзыва для авторизованного пользователя}
                 \label{fig:auth_orders_all_use}
             \end{figure}
 
-            \subsubsection{РљР°СЂС‚РѕС‡РєР° Р·Р°РєР°Р·Р°}
+            \subsubsection{Карточка заказа}
                 \par{
-                РЎРј. СЂРёСЃ. \ref{fig:auth_order_cart}
+                См. рис. \ref{fig:auth_order_cart}
                 }
                 \begin{figure}
                     \center
                     \includegraphics[width=170mm]{04_auth_funcs/figures/12.eps}
-                    \caption{Р”РѕР±Р°РІР»РµРЅРёРµ РѕС‚Р·С‹РІР° РґР»СЏ Р°РІС‚РѕСЂРёР·РѕРІР°РЅРЅРѕРіРѕ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ}
+                    \caption{Добавление отзыва для авторизованного пользователя}
                     \label{fig:auth_order_cart}
                 \end{figure}
 
-                \paragraph{РќРѕРјРµСЂ Р·Р°РєР°Р·Р°}
+                \paragraph{Номер заказа}
 
                     \par{
-                    РЎРєРІРѕР·РЅРѕР№ РЅРѕРјРµСЂ Р·Р°РєР°Р·Р°. РќР°С‡РёРЅР°РµС‚СЃСЏ СЃ РїСЂРµС„РёРєСЃР° <<Р‘РўР РљРЎ>>
+                    Сквозной номер заказа. Начинается с префикса <<БТРКС>>
                     }
 
-                \paragraph{Р”Р°С‚Р° Р·Р°РєР°Р·Р°}
+                \paragraph{Дата заказа}
                     \par{
-                    Р”Р°С‚Р°, РєРѕРіРґР° РЅР° СЃР°Р№С‚Рµ \gloss{shop} Р±С‹Р» СЃРґРµР»Р°РЅ Р·Р°РєР°Р·
+                    Дата, когда на сайте \gloss{shop} был сделан заказ
                     }
-                \paragraph{РЎС‚Р°С‚СѓСЃ Р·Р°РєР°Р·Р°}
+                \paragraph{Статус заказа}
 
                     \par{
-                    РРЅС„РѕСЂРјР°С†РёСЏ Рѕ С‚РµРєСѓС‰РµРј СЃС‚Р°С‚СѓСЃРµ Рё, РґР»СЏ СЃС‚Р°С‚СѓСЃР° <<РІ 
-                    СЂР°Р±РѕС‚Рµ>>, Рѕ РєРѕР»РёС‡РµСЃС‚РІРµ РґРЅРµР№, РїСЂРѕС€РµРґС€РёС… СЃ РјРѕРјРµРЅС‚Р° Р·Р°РєР°Р·Р° 
-                    (СЃРј. \ref{sec:auth_order_statuses})
+                    Информация о текущем статусе и, для статуса <<в 
+                    работе>>, о количестве дней, прошедших с момента заказа 
+                    (см. \ref{sec:auth_order_statuses})
                     }
 
-                \paragraph{РЎРµСЂС‚РёС„РёРєР°С‚}
+                \paragraph{Сертификат}
 
                     \par{
-                    РЎРј. СЂРёСЃ. \ref{fig:auth_order_cert}
+                    См. рис. \ref{fig:auth_order_cert}
                     }
 
                 \begin{enumerate}
-                    \item РЎРµСЂС‚РёС„РёРєР°С‚ РІС‹РґР°С‘С‚СЃСЏ РЅР° \gloss{nonmater_goods}.
-                    \item Р”Р»СЏ \gloss{mater_goods} СЃРµСЂС‚РёС„РёРєР°С‚ РЅРµ РґРѕСЃС‚СѓРїРµРЅ.
-                    \item РЎРµСЂС‚РёС„РёРєР°С‚ СЃРѕРґРµСЂР¶РёС‚ РёРЅС„РѕСЂРјР°С†РёСЋ, РєРѕС‚РѕСЂСѓСЋ
-                        \gloss{partner_ag} РёСЃРїРѕР»СЊР·СѓСЋС‚ РґР»СЏ РїСЂРµРґРѕСЃС‚Р°РІР»РµРЅРёСЏ
-                        РЅРµРјР°С‚РµСЂРёР°Р»СЊРЅС‹С… РїРѕРѕС‰СЂРµРЅРёР№.
+                    \item Сертификат выдаётся на \gloss{nonmater_goods}.
+                    \item Для \gloss{mater_goods} сертификат не доступен.
+                    \item Сертификат содержит информацию, которую
+                        \gloss{partner_ag} используют для предоставления
+                        нематериальных поощрений.
                         \begin{itemize}
-                            \item РЅРѕРјРµСЂ СЃРµСЂС‚РёС„РёРєР°С‚Р° (С„РѕСЂРјРёСЂСѓРµС‚СЃСЏ РёР· РЅРѕРјРµСЂР°
-                            Р·Р°РєР°Р·Р°);
-                            \item СЃСЂРѕРє РґРµР№СЃС‚РІРёСЏ;
-                            \item Р¤РРћ Р»РёС†Р°, РєРѕС‚РѕСЂРѕРјСѓ РїСЂРµРґСЃС‚Р°РІР»СЏРµС‚СЃСЏ РїРѕРѕС‰СЂРµРЅРёРµ;
-                            \item РЅР°РёРјРµРЅРѕРІР°РЅРёРµ РїРѕРѕС‰СЂРµРЅРёСЏ;
-                            \item Р°РґСЂРµСЃ, РїРѕ РєРѕС‚РѕСЂРѕРјСѓ СЂР°СЃРїРѕР»РѕР¶РµРЅ
+                            \item номер сертификата (формируется из номера
+                            заказа);
+                            \item срок действия;
+                            \item ФИО лица, которому представляется поощрение;
+                            \item наименование поощрения;
+                            \item адрес, по которому расположен
                                 \gloss{partner_ag};
-                            \item РїСЂР°РІРёР»Р° РїСЂРµРґРѕСЃС‚Р°РІР»РµРЅРёСЏ РїРѕРѕС‰СЂРµРЅРёСЏ;
-                            \item РєР°СЂС‚Р°-СЃС…РµРјР° РїСЂРѕРµР·РґР°;
+                            \item правила предоставления поощрения;
+                            \item карта-схема проезда;
                         \end{itemize}
                 \end{enumerate}
 
                 \begin{figure}
                     \center
                     \includegraphics[width=120mm]{04_auth_funcs/figures/13.eps}
-                    \caption{РЎРµСЂС‚РёС„РёРєР°С‚.}
+                    \caption{Сертификат.}
                     \label{fig:auth_order_cert}
                 \end{figure}
  
-                \paragraph{РЎРІСЏР·СЊ СЃ Р°РґРјРёРЅРёСЃС‚СЂР°С†РёРµР№}
+                \paragraph{Связь с администрацией}
 
                     \par{
-                    РЎРј. СЂРёСЃ. \ref{fig:auth_order_feedback}
+                    См. рис. \ref{fig:auth_order_feedback}
 
-                    РџРѕРІС‚РѕСЂСЏРµС‚ С„СѓРЅРєС†РёРѕРЅР°Р» \gloss{FBF} РёР· \ref{sec:fbf}, Р·Р°
-                    РёСЃРєР»СЋС‡РµРЅРёРµРј РЅРµСЃРєРѕР»СЊРєРёС… РґРµС‚Р°Р»РµР№:
+                    Повторяет функционал \gloss{FBF} из \ref{sec:fbf}, за
+                    исключением нескольких деталей:
                     }
 
                 \begin{itemize}
-                    \item РІ С„РѕСЂРјСѓ РїРѕРґСЃС‚Р°РІР»СЏРµС‚СЃСЏ РЅРѕРјРµСЂ Р·Р°РєР°Р·Р°, РІ РєРѕС‚РѕСЂРѕРј Р±С‹Р»Р°
-                    РЅР°Р¶Р°С‚Р° РёРєРѕРЅРєР° <<СЃРІСЏР·СЊ СЃ Р°РґРјРёРЅРёСЃС‚СЂР°С†РёРµР№>>;
-                    \item РІ С„РѕСЂРјСѓ РїРѕРґСЃС‚Р°РІР»СЏРµС‚СЃСЏ Р¤.Р.Рћ. РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ, РґРµР»Р°СЋС‰РµРіРѕ
-                    РѕР±СЂР°С‰РµРЅРёРµ.
+                    \item в форму подставляется номер заказа, в котором была
+                    нажата иконка <<связь с администрацией>>;
+                    \item в форму подставляется Ф.И.О. пользователя, делающего
+                    обращение.
                 \end{itemize}
 
                 \begin{figure}
                     \center
                     \includegraphics[width=120mm]{04_auth_funcs/figures/11.eps}
-                    \caption{РЎРІСЏР·СЊ СЃ Р°РґРјРёРЅРёСЃС‚СЂР°С†РёРµР№ РїРѕ РїРѕРІРѕРґСѓ Р·Р°РєР°Р·Р°.}
+                    \caption{Связь с администрацией по поводу заказа.}
                     \label{fig:auth_order_feedback}
                 \end{figure}
-                \paragraph{РћС‚РјРµРЅР° Р·Р°РєР°Р·Р°}
+                \paragraph{Отмена заказа}
                 
                 \begin{enumerate}
-                    \item РРєРѕРЅРєР° РѕС‚РјРµРЅС‹ Р·Р°РєР°Р·Р° РґРѕСЃС‚СѓРїРЅР° С‚РѕР»СЊРєРѕ РґР»СЏ РїРѕРѕС‰СЂРµРЅРёР№ Сѓ
-                    РєРѕС‚РѕСЂС‹С… РїСЂРµРґСѓСЃРјРѕС‚СЂРµРЅР° РѕС‚РјРµРЅР°.
-                    \item Р”Р»СЏ РїРѕРѕС‰СЂРµРЅРёР№ Сѓ РєРѕС‚РѕСЂС‹С… РѕС‚РјРµРЅР° РЅРµ РїСЂРµРґСѓСЃРјРѕС‚СЂРµРЅР°
-                    РІС‹РІРѕРґРёС‚СЃСЏ СЃРѕРѕС‚РІРµС‚СЃС‚РІСѓСЋС‰Р°СЏ РёРЅС„РѕСЂРјР°С†РёРѕРЅРЅР°СЏ РёРєРѕРЅРєР°
-                    \item РџРѕСЃР»Рµ РЅР°Р¶Р°С‚РёСЏ РЅР° РёРєРѕРЅРєСѓ <<РѕС‚РјРµРЅР°>> Р·Р°РєР°Р· РїРѕРјРµС‡Р°РµС‚СЃСЏ
-                    РєР°Рє <<РІ РїСЂРѕС†РµСЃСЃРµ РѕС‚РјРµРЅС‹>> Рё РѕР¶РёРґР°РµС‚ РѕС‚РјРµРЅС‹, РєРѕС‚РѕСЂР°СЏ
-                    РїСЂРѕРёСЃС…РѕРґРёС‚ РІРѕ РІСЂРµРјСЏ РїСЂРѕС†РµСЃСЃР° \gloss{exchange1c}.
-                    \item РџРѕСЃР»Рµ Р·Р°РІРµСЂС€РµРЅРёСЏ РѕС‚РјРµРЅС‹ Р·Р°РєР°Р· РїРѕР»СѓС‡Р°РµС‚ СЃС‚Р°С‚СѓСЃ
-                    <<РѕС‚РјРµРЅС‘РЅ>> Рё РїРµСЂРµРјРµС‰Р°РµС‚СЃСЏ РІРѕ РІРєР»Р°РґРєСѓ <<СѓР¶Рµ РёСЃРїРѕР»СЊР·РѕРІР°Р»>>
-                    (СЃРј. \ref{sec:auth_orders_already_use})
+                    \item Иконка отмены заказа доступна только для поощрений у
+                    которых предусмотрена отмена.
+                    \item Для поощрений у которых отмена не предусмотрена
+                    выводится соответствующая информационная иконка
+                    \item После нажатия на иконку <<отмена>> заказ помечается
+                    как <<в процессе отмены>> и ожидает отмены, которая
+                    происходит во время процесса \gloss{exchange1c}.
+                    \item После завершения отмены заказ получает статус
+                    <<отменён>> и перемещается во вкладку <<уже использовал>>
+                    (см. \ref{sec:auth_orders_already_use})
                 \end{enumerate}
 
 
-                \paragraph{Р¤РѕС‚Рѕ С‚РѕРІР°СЂР°}
+                \paragraph{Фото товара}
 
                     \par{
-                    РЈРјРµРЅСЊС€РµРЅРЅРѕРµ (РёРєРѕРЅРєР°)
+                    Уменьшенное (иконка)
                     }
 
-                \paragraph{РЎС‚РѕРёРјРѕСЃС‚СЊ Р·Р°РєР°Р·Р°}
+                \paragraph{Стоимость заказа}
 
                     \par{
-                    РћР±С‰Р°СЏ СЃС‚РѕРёРјРѕСЃС‚СЊ Р·Р°РєР°Р·Р° СЃ СѓС‡РµС‚РѕРј С‚Р°РєРёС… РїР°СЂР°РјРµС‚СЂРѕРІ РєР°Рє 
-                    С†РµРЅР° Рё \gloss{quant}
+                    Общая стоимость заказа с учетом таких параметров как 
+                    цена и \gloss{quant}
                     }
 
-                \paragraph{РќР°Р·РІР°РЅРёРµ С‚РѕРІР°СЂР°}
-                \paragraph{РЎРєР»Р°Рґ}
+                \paragraph{Название товара}
+                \paragraph{Склад}
 
                     \begin{itemize}
-                        \item СѓРєР°Р·С‹РІР°РµС‚СЃСЏ Р°РґСЂРµСЃ СЃРєР»Р°РґР°, РєРѕС‚РѕСЂС‹Р№ Р±С‹Р» РІС‹Р±СЂР°РЅ РїСЂРё
-                        Р·Р°РєР°Р·Рµ РїРѕРѕС‰СЂРµРЅРёСЏ;
-                        \item СЃСЃС‹Р»РєР° СЃ Р°РґСЂРµСЃ СЃРєР»Р°РґР° РІРµРґС‘С‚ РЅР° СЃС‚СЂР°РЅРёС†Сѓ 
-                        РёРЅС„РѕСЂРјР°С†РёРё Рѕ СЃРєР»Р°РґРµ (СЃРј. \label{sec:page_address}).
+                        \item указывается адрес склада, который был выбран при
+                        заказе поощрения;
+                        \item ссылка с адрес склада ведёт на страницу 
+                        информации о складе (см. \label{sec:page_address}).
                     \end{itemize}
 
-                \paragraph{РџРµСЂРµС…РѕРґ Рє С„РѕСЂРјРµ РѕС‚Р·С‹РІР°}
+                \paragraph{Переход к форме отзыва}
 
                     \par{
-                    РРєРѕРЅРєР°, СЃСЃС‹Р»РєР° СЃ РєРѕС‚РѕСЂРѕР№ РІРµРґС‘С‚ РЅР° С„РѕСЂРјСѓ РѕС‚Р·С‹РІР°
-                    СЃРѕРѕС‚РІРµС‚СЃС‚РІСѓСЋС‰РµРіРѕ С‚РѕРІР°СЂР° 
-                    (СЃРј.\ref{sec:auth_goods_cart_otz_form})
+                    Иконка, ссылка с которой ведёт на форму отзыва
+                    соответствующего товара 
+                    (см.\ref{sec:auth_goods_cart_otz_form})
                     }
 
-                \paragraph{РљРѕР»РёС‡РµСЃС‚РІРѕ Р·Р°РєР°Р·Р°РЅРЅС‹С… РµРґРёРЅРёС†}
+                \paragraph{Количество заказанных единиц}
 
                     \par{
-                    РљРѕР»РёС‡РµСЃС‚РІРѕ Р·Р°РєР°Р·Р°РЅРЅС‹С… РµРґРёРЅРёС† РїРѕРѕС‰СЂРµРЅРёСЏ, РєР°Р¶РґР°СЏ РёР· РєРѕС‚РѕСЂС‹С…
-                    Р°РЅР°Р»РѕРіРёС‡РЅР° РїРѕРЅСЏС‚РёСЋ \gloss{quant}
+                    Количество заказанных единиц поощрения, каждая из которых
+                    аналогична понятию \gloss{quant}
                     }
 
-                \paragraph{Р¦РµРЅР° С‚РѕРІР°СЂР°}
+                \paragraph{Цена товара}
 
                     \par{
-                    Р¦РµРЅР° Р·Р° РѕРґРёРЅ \gloss{quant}
+                    Цена за один \gloss{quant}
                     }
                     
-        \subsection{РњРѕРё Р±Р°Р»Р»С‹}
+        \subsection{Мои баллы}
 
-            РЎРј. СЂРёСЃ. \ref{fig:auth_my_points}
+            См. рис. \ref{fig:auth_my_points}
 
-            РЎРїРёСЃРѕРє РЅР°С‡РёСЃР»РµРЅРёР№ Рё СЃРїРёСЃР°РЅРёР№ Р±Р°Р»Р»РѕРІ РґР»СЏ РґР°РЅРЅРѕРіРѕ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ. РљР°Р¶РґС‹Р№
-            СЌР»РµРјРµРЅС‚ СЃРїРёСЃРєР° РѕС‚СЂР°Р¶Р°РµС‚ РѕР±СЉРµРєС‚ \gloss{BXTRANSACT} (Рё СЃРѕРѕС‚РІРµС‚СЃС‚РІСѓСЋС‰РёР№
-            РµРјСѓ \gloss{AGTRANSACT})
+            Список начислений и списаний баллов для данного пользователя. Каждый
+            элемент списка отражает объект \gloss{BXTRANSACT} (и соответствующий
+            ему \gloss{AGTRANSACT})
 
             \begin{figure}
                 \center
                 \includegraphics[width=120mm]{04_auth_funcs/figures/14.eps}
-                \caption{РњРѕРё Р±Р°Р»Р»С‹.}
+                \caption{Мои баллы.}
                 \label{fig:auth_my_points}
             \end{figure}
         
-            \subsubsection{Р”Р°С‚Р°}
-                Р”Р°С‚Р° РїСЂРѕРІРµРґРµРЅРёСЏ С‚СЂР°РЅР·Р°РєС†РёРё
-            \subsubsection{РћРїРµСЂР°С†РёСЏ}
-                РљРѕРјРјРµРЅС‚Р°СЂРёР№ Рє С‚СЂР°РЅР·Р°РєС†РёРё 
-            \subsubsection{Р‘Р°Р»Р»С‹}
-                РќР°С‡РёСЃР»РµРЅРЅС‹Рµ РёР»Рё СЃРїРёСЃР°РЅРЅС‹Рµ Р±Р°Р»С‹
+            \subsubsection{Дата}
+                Дата проведения транзакции
+            \subsubsection{Операция}
+                Комментарий к транзакции 
+            \subsubsection{Баллы}
+                Начисленные или списанные балы
 
-            \subsubsection{РџР°РіРёРЅР°С†РёСЏ}
-                РџРѕСЃС‚СЂР°РЅРёС‡РЅР°СЏ РЅР°РІРёРіР°С†РёСЏ
+            \subsubsection{Пагинация}
+                Постраничная навигация
             
-            \subsubsection{Р’РєР»Р°РґРєР° <<РІСЃРµ Р±Р°Р»Р»С‹>>}
-                РџРѕРєР°Р·С‹РІР°СЋС‚СЃСЏ РІСЃРµ С‚СЂР°РЅР·Р°РєС†РёРё
+            \subsubsection{Вкладка <<все баллы>>}
+                Показываются все транзакции
 
-            \subsubsection{Р’РєР»Р°РґРєР° <<РЅР°С‡РёСЃР»РµРЅРёСЏ>>}
-                РџРѕРєР°Р·С‹РІР°СЋС‚СЃСЏ С‚РѕР»СЊРєРѕ С‚СЂР°РЅР·Р°РєС†РёРё С‚РёРїР° <<РґРµР±РёС‚>>
+            \subsubsection{Вкладка <<начисления>>}
+                Показываются только транзакции типа <<дебит>>
 
-            \subsubsection{Р’РєР»Р°РґРєР° <<СЃРїРёСЃР°РЅРёСЏ>>}
-                РџРѕРєР°Р·С‹РІР°С‚СЃСЏ С‚РѕР»СЊРєРѕ С‚СЂР°РЅР·Р°РєС†РёРё С‚РёРїР° <<РєСЂРµРґРёС‚>>
+            \subsubsection{Вкладка <<списания>>}
+                Показыватся только транзакции типа <<кредит>>
 
-        \subsection{РњРѕРё Р¶РµР»Р°РЅРёСЏ}
+        \subsection{Мои желания}
             \label{sec:auth_my_wishes}
-            РЎРј. СЂРёСЃ. \ref{fig:auth_my_wishes}
+            См. рис. \ref{fig:auth_my_wishes}
 
-            Р’ РґР°РЅРЅС‹Р№ СЂР°Р·РґРµР» РїРѕРјРµС‰Р°СЋС‚СЃСЏ С‚РёР·РµСЂС‹ С‚РѕРІР°СЂРѕРІ(СЃРј. 
-            \gloss{goods_tizer}), РґРѕР±Р°РІР»РµРЅРЅС‹С… РІ РјРѕРё
-            Р¶РµР»Р°РЅРёСЏС… РІ С‚РёР·РµСЂР°С… (СЃРј. \ref{sec:auth_tizer}) СЂР°Р·РґРµР»РѕРІ 
+            В данный раздел помещаются тизеры товаров(см. 
+            \gloss{goods_tizer}), добавленных в мои
+            желаниях в тизерах (см. \ref{sec:auth_tizer}) разделов 
             \ref{sec:baseitems_goods_area}, \ref{sec:page_catalog_section}
 
-            Р”Р»СЏ РёСЃРєР»СЋС‡РµРЅРёСЏ РёР· РјРѕРёС… Р¶РµР»Р°РЅРёР№ РЅРµРѕР±С…РѕРґРёРјРѕ РєР»РёРєРЅСѓС‚СЊ РЅР° СЃРµСЂРґРµС‡РєРѕ РІ
-            РІРµСЂС…РЅРµРј РїСЂР°РІРѕРј СѓРіР»Сѓ С‚РёР·РµСЂР° С‚РѕРІР°СЂР° (СЃРј. \gloss{goods_tizer})
+            Для исключения из моих желаний необходимо кликнуть на сердечко в
+            верхнем правом углу тизера товара (см. \gloss{goods_tizer})
         
             \begin{figure}
                 \center
                 \includegraphics[width=120mm]{04_auth_funcs/figures/15.eps}
-                \caption{РњРѕРё Р¶РµР»Р°Р°РЅРёРµ.}
+                \caption{Мои желаание.}
                 \label{fig:auth_my_wishes}
             \end{figure}
         
