--- a/docs/manual/source/05_admin_funcs/index.tex
+++ b/docs/manual/source/05_admin_funcs/index.tex
@@ -1,1 +1,18 @@
 \chapter{Функционал пользователя группы <<\gloss{shop_admin}>>}
+
+    \section{Работа с заказами}
+    \label{sec:orders_work}
+        \subsection{Поиск и фильтрация заказов}
+        \subsection{Просмотр заказа}
+        \subsection{Печать акта}
+        \subsection{Просмотр истории изменения статусов заказа}
+        \subsection{Исполнение заказа}
+        \subsection{Выгрузка заказов по критерию}
+    \subsection{Выдача прав на использование \gloss{arm} пользователям групп \gloss{operator_ag} и \gloss{partner_ag}}
+    \subsection{Управление параметрами подключения к внешним сервисам}
+        \subsection{Тройка}
+        \subsection{Парковка}
+    \section{Просмотр логов обмена \gloss{UNF} и \gloss{shop}}
+    \section{Просмотр журнала исполнения заказов пользователям групп \gloss{operator_ag} и \gloss{partner_ag}}
+    \section{Просмотр отчётов}
+        \subsection{Полный отчет по складским остаткам}
