--- a/docs/manual/source/index.bib
+++ b/docs/manual/source/index.bib
@@ -270,16 +270,33 @@ definition={
 }
 }
 
-
-@ag{
-partner_ag,
-word={Поставщик АГ},
+@gd{arm,
+word={АРМ АГ},
 definition={
-Сторонняя организация, предоставляющая различные услуги для \gloss{AG}  для
-выдачи пользователям \gloss{shop} как \gloss{nonmater_goods}
+Web-интерфейс на основе \gloss{shop}, позволящий пользователям групп 
+\gloss{partner_ag} и \gloss{operator_ag} отмечать найти и просмотреть 
+заказы и отметить факт выдачи, а так же делать выгрузки отчетов
 }
 }
 
+@gd{
+partner_ag,
+word={Партнёр АГ},
+definition={
+Сторонняя организация, предоставляющая различные услуги для \gloss{AG} для
+выдачи пользователям \gloss{shop} как \gloss{nonmater_goods} и используя 
+\gloss{arm}
+}
+}
+
+@gd{
+operator_ag,
+word={Оператор АГ},
+definition={
+Пользователь \gloss{shop}, выдающий \gloss{mater_goods} в МФЦ используя 
+\gloss{arm}
+}
+}
 
 
 
