--- a/docs/manual/source/index.tex
+++ b/docs/manual/source/index.tex
@@ -121,8 +121,10 @@
 \include{./03_auth/index}
 \include{./04_auth_funcs/index}
 \include{./05_admin_funcs/index}
+\include{./09_partner_operator/index}
 \include{./06_content_funcs/index}
 \include{./07_external_services/index}
-\include{./08_usecases/index}
+
+% \include{./08_usecases/index}
 
 \end{document}
